fix appid & title

--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/文本审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/文本审核.md
@@ -22,12 +22,12 @@ public Guzzle\Service\Resource\Model detectText(array $args = array());
 
 #### 请求示例
 
-#### 示例一：文本内容审核
+#### 示例一：审核文本内容
 ```php
 try {
     $content = '敏感词';
     $result = $cosClient->detectText(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
         'Input' => array(
             'Content' => base64_encode($content) //文本需base64_encode
         ),
@@ -44,11 +44,11 @@ try {
 }
 ```
 
-#### 示例二：存储桶文本文件审核
+#### 示例二：审核存储桶路径下的文本文件
 ```php
 try {
     $result = $cosClient->detectText(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
         'Input' => array(
             'Object' => 'test01.txt'// 对象名，请注意对象是否存在
         ),
