--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/视频审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/视频审核.md
@@ -25,7 +25,7 @@ public Guzzle\Service\Resource\Model detectVideo(array $args = array());
 ```php
 try {
     $result = $cosClient->detectVideo(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
         'Input' => array(
             'Object' => 'movie.mp4',
         ),
@@ -119,7 +119,7 @@ public Guzzle\Service\Resource\Model getDetectVideoResult(array $args = array())
 ```php
 try {
     $result = $cosClient->detectVideo(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
         'Key' => 'exampleobject', // JobId
     ));
     // 请求成功
