--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/音频审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/音频审核.md
@@ -24,7 +24,7 @@ public Guzzle\Service\Resource\Model detectAudio(array $args = array());
 ```php
 try {
     $result = $cosClient->detectAudio(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
         'Input' => array(
             'Object' => 'sound01.mp3',
         ),
@@ -100,7 +100,7 @@ public Guzzle\Service\Resource\Model getDetectAudioResult(array $args = array())
 ```php
 try {
     $result = $cosClient->getDetectAudioResult(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
         'Key' => 'exampleobject', // JobId
     ));
     // 请求成功
