--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/图片审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/图片审核.md
@@ -21,12 +21,12 @@ public Guzzle\Service\Resource\Model getObjectSensitiveContentRecognition(array 
 
 #### 请求示例
 
-#### 示例一：存储桶图片审核
+#### 示例一：审核某个存储桶路径下的图片
 ```php
 try {
     //存储桶图片审核
     $result = $cosClient->getObjectSensitiveContentRecognition(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
         'Key' => 'exampleobject', 
         'DetectType' => 'porn,politics' //可选四种参数：porn,politics,terrorist,ads，可使用多种规则，注意规则间不要加空格
 //      'Interval' => 5, // 审核gif时使用 截帧的间隔
@@ -41,13 +41,13 @@ try {
 }
 ```
 
-#### 示例二：存储桶链接审核
+#### 示例二：审核图片URL
 ```php
 try {
     //图片链接审核
     $imgUrl = 'https://test.jpg';
     $result = $cosClient->getObjectSensitiveContentRecognition(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
         'Key' => '/', // 链接图片资源路径写 / 即可
         'DetectType' => 'porn,ads',//可选四种参数：porn,politics,terrorist,ads，可使用多种规则，注意规则间不要加空格
         'DetectUrl' => $imgUrl,
