--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/文档审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/文档审核.md
@@ -24,7 +24,7 @@ public Guzzle\Service\Resource\Model detectDocument(array $args = array());
 ```php
 try {
     $result = $cosClient->detectDocument(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
         'Input' => array(
             'Url' => 'https://example.com/test01.docx', //文档文件的链接地址
             'Type' => 'docx', //文档文件类型
@@ -101,7 +101,7 @@ public Guzzle\Service\Resource\Model getDetectDocumentResult(array $args = array
 ```php
 try {
     $result = $cosClient->getDetectDocumentResult(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
         'Key' => 'exampleobject', // JobId
     ));
     // 请求成功
