--- a/product/视频服务/移动直播/购买指导/价格总览.md
+++ b/product/视频服务/移动直播/购买指导/价格总览.md
@@ -166,6 +166,12 @@ RTC 连麦互动直播服务为您提供音视频通用套餐包，可按照 **1
          <th style="text-align:center">套餐包价格（元）</th> 
           <th style="text-align:center">折扣</th> 
      </tr>
+		  <tr>
+         <td style="text-align:center">免费试用套餐包</td>   
+         <td style="text-align:center">10</td>   
+         <td style="text-align:center">0.00</td>
+         <td style="text-align:center" colspan=3>RTC 免费试用套餐包详细说明请参见 <a href="https://cloud.tencent.com/document/product/647/44360">免费试用</a>。</td>   
+     </tr> 
      <tr>
          <td style="text-align:center" rowspan="4">固定套餐包</td>   
          <td style="text-align:center">25</td>   
@@ -395,8 +401,8 @@ RTC 连麦互动直播服务为您提供音视频通用套餐包，可按照 **1
 	<td>51198</td>
 	<td>单独拉群专人支持</td>
 </tr></table>
-**计费说明：**
 
+**计费说明：**
 - 购买 [移动直播连麦预付费套餐包](https://buy.cloud.tencent.com/mobilelive?urlctr=yes&basepack=10tb)。
 - 连麦资源包在您支付购买后立即生效，有效期为**1年**，到期资源包若有余量则一次性扣除。
 - 每天出日结连麦账单（具体以账单时间为准）扣除前一天连麦费用时，优先抵扣测试/正式资源包余量，超出部分按后付费日结使用时长出账。资源包购买当日不支持抵扣前一日的计费用量。
@@ -437,8 +443,8 @@ A、B 及 C 三个人进行视频连麦，其中 A 和 B 两人连麦10分钟，
     <td> 该价格涵盖范围为视频分辨率小于等于720P的场景，高于720P的需求需单独联系客服评估报价。 </td>
   </tr>  
 </table>
-**计费说明：**
 
+**计费说明：**
 - 计费项：移动直播连麦时长。
 - 计费方式：后付费计费，购买正式连麦套餐包开通服务后，套餐包用尽自动转日结后付费。
 - 计费周期：按日计费，每天出日结连麦账单（具体以账单时间为准），扣除前一天的连麦费用。
