--- a/product/安全服务/网站管家/操作指南/资产中心/实例列表.md
+++ b/product/安全服务/网站管家/操作指南/资产中心/实例列表.md
@@ -35,7 +35,10 @@
 ![](https://main.qcloudimg.com/raw/7730ae51acb39f40b324d6f11c0b5678.png)
 1. 若套餐即将到期，需要续费，单击【续费】，在 Web 应用防火墙套餐续费页面，选择续费时长，单击【立即续费】，可对当前套餐进行续费。
 ![](https://main.qcloudimg.com/raw/c088ffea99725b484070b19151787be7.png)
-2. 如果展板显示域名数量包或 QPS 规格将满，单击【更多】，即可进行域名包和 QPS 扩展包的购买。
+2. 如果展板显示域名数量包或 QPS 规格将满，单击【更多】，选择【购买域名包】或【购买 QPS 扩展包】，即可进行域名包和 QPS 扩展包的购买。
 >? 如果当前实例或域名包已经过期，请先续费，再购买。
 >
-![](https://main.qcloudimg.com/raw/fc8184ef0451304b171b1c04d9e8562b.png)
+ - 购买域名包：选择购买数量（1-500个），单击【确认】即可购买域名包。
+ ![](https://main.qcloudimg.com/raw/7ed2d999aa1ce3ed87c7139ac6233acb.png)
+ - 购买 QPS 扩展包：选择购买数量（1-500个），单击【确认】即可购买 QPS 扩展包。
+ ![](https://main.qcloudimg.com/raw/30ef9a757bf15a30e0acb882d0b1f005.png)
