--- a/product/视频服务/点播/播放器 SDK 手册/播放器综述.md
+++ b/product/视频服务/点播/播放器 SDK 手册/播放器综述.md
@@ -1,8 +1,8 @@
 ## 产品说明
-腾讯云视立方播放器 Player （以下简称播放器 Player）是腾讯云为用户连接云端服务、打造云端一体化的重要组成部分，播放器 Player 为点播播放场景提供 Web 端、iOS 端、Android 端、Flutter 端等多平台视频点播能力，用户可以根据自己的需求集成 [播放器 Player SDK](xxxx) 或参考腾讯云点播超级播放器在短时间内打造出流畅的观看体验，同时云点播提供集多功能于一体的高性能解决方案助力用户迅速打造高质量终端服务。
+腾讯云视立方播放器 Player （以下简称播放器 Player）是腾讯云为用户连接云端服务、打造云端一体化的重要组成部分，播放器 Player 为点播播放场景提供 Web 端、iOS 端、Android 端、Flutter 端等多平台视频点播能力，用户可以根据自己的需求集成 [播放器 Player SDK](https://cloud.tencent.com/document/product/266/61438) 或参见 [腾讯云点播超级播放器](xxxx) 在短时间内打造出流畅的观看体验，同时云点播提供集多功能于一体的高性能解决方案助力用户迅速打造高质量终端服务。
 
 ## 快速了解
-为了解决用户在使用播放器 Player SDK 接入复杂，版本众多，文档繁杂的问题，点播播放提供了超级播放器帮助客户理解和接入视频点播服务，在正式使用腾讯云视立方播放器 Player  前，建议所有客户首先阅读超级播放器的 [基本概念](xxxx) 和 [如何选择点播播放器](xxxx) 选择适合自己的播放器类型。
+为了解决用户在使用播放器 Player SDK 接入复杂，版本众多，文档繁杂的问题，点播播放提供了超级播放器帮助客户理解和接入视频点播服务，在正式使用腾讯云视立方播放器 Player  前，建议所有客户首先阅读超级播放器的 [基本概念](https://cloud.tencent.com/document/product/266/61437) 和 [如何选择点播播放器](https://cloud.tencent.com/document/product/266/61437#choosePlayer) 选择适合自己的播放器类型。
 
 ## 核心优势
 ### 云端一体化服务
@@ -18,7 +18,7 @@
 
 ## 常见场景
 ### 短视频播放
-超级播放器结合云点播平台提供的内容审核、媒资管理、无缝切换、首屏秒开互动浮窗等功能，常用于用户打造短视频相关场景，同时云点播提供[ 短视频 UGSC Demo](xxxx) 供用户参考。
+超级播放器结合云点播平台提供的内容审核、媒资管理、无缝切换、首屏秒开互动浮窗等功能，常用于用户打造短视频相关场景，同时云点播提供[ 短视频 UGSC Demo](https://cloud.tencent.com/document/product/584) 供用户参考。
 
 ### 长视频播放
 超级播放器结合云点播的自适应码流、无缝清晰度切换、缩略图、截图、倍速播放等功能，长用户用户打造视频剧集和门户类场景，同时云点播提供 [视频播放方案](xxxx) 供用户参考。
@@ -31,11 +31,11 @@
 
 
 ## SDK下载
-您可以体验播放器 Demo，更多信息，请参见 [Demo 体验](xxxx)。
-您可以下载对应的 SDK 进行集成操作，更多信息，请参见 [SDK 下载](xxxx)。
-您可以通过 [功能列表](xxxx)，查询超级播放器是否满足自己的能力需求。
+您可以体验播放器 Demo，更多信息，请参见 [Demo 体验](https://cloud.tencent.com/document/product/266/58693)。
+您可以下载对应的 SDK 进行集成操作，更多信息，请参见 [SDK 下载](https://cloud.tencent.com/document/product/266/61438)。
+您可以通过 [功能列表](https://cloud.tencent.com/document/product/266/61438#functionList)，查询超级播放器是否满足自己的能力需求。
 
 ## 接入指引
 为了帮助您快速接入超级播放器，我们为您提供了超级播放器 接入指引，以示例的方式为您讲解接入步骤。
 
-如遇到播放问题，请参见 [常见问题文档](xxxx)。
+如遇到播放问题，请参见 [常见问题文档](https://cloud.tencent.com/document/product/266/37706)。
