--- a/product/企业应用/品牌经营管家/购买指南/计费指南.md
+++ b/product/企业应用/品牌经营管家/购买指南/计费指南.md
@@ -39,7 +39,7 @@
 
 ## 购买方式
 进入 [品牌经营管家购买页](https://buy.cloud.tencent.com/bma) ，根据需求选择套餐，或者自由设置购买内容，系统会为您自动计算所需费用。
-1. 选择完毕后，勾选【我已阅读并同意《品牌经营管家服务条款》】，并单击【立即购买】生成订单，最后单击【立即支付】完成支付流程即购买成功。
+1. 选择完毕后，勾选**我已阅读并同意《品牌经营管家服务条款》**，并单击**立即购买**生成订单，最后单击**立即支付**完成支付流程即购买成功。
 2. 如需更多帮助，可 [联系我们](https://cloud.tencent.com/act/event/connect-service) 进行沟通。
 
 
