--- a/product/视频服务/点播/播放器 SDK 手册/播放器综述.md
+++ b/product/视频服务/点播/播放器 SDK 手册/播放器综述.md
@@ -1,5 +1,5 @@
 ## 产品说明
-腾讯云视立方播放器 Player （以下简称播放器 Player）是腾讯云为用户连接云端服务、打造云端一体化的重要组成部分，播放器 Player 为点播播放场景提供 Web 端、iOS 端、Android 端、Flutter 端等多平台视频点播能力，用户可以根据自己的需求集成 [播放器 Player SDK](https://cloud.tencent.com/document/product/266/61438) 或参见 [腾讯云点播超级播放器](xxxx) 在短时间内打造出流畅的观看体验，同时云点播提供集多功能于一体的高性能解决方案助力用户迅速打造高质量终端服务。
+腾讯云视立方播放器 Player （以下简称播放器 Player）是腾讯云为用户连接云端服务、打造云端一体化的重要组成部分，播放器 Player 为点播播放场景提供 Web 端、iOS 端、Android 端、Flutter 端等多平台视频点播能力，用户可以根据自己的需求集成 [播放器 Player SDK](https://cloud.tencent.com/document/product/266/61438) 或参考腾讯云点播超级播放器在短时间内打造出流畅的观看体验，同时云点播提供集多功能于一体的高性能解决方案助力用户迅速打造高质量终端服务。
 
 ## 快速了解
 为了解决用户在使用播放器 Player SDK 接入复杂，版本众多，文档繁杂的问题，点播播放提供了超级播放器帮助客户理解和接入视频点播服务，在正式使用腾讯云视立方播放器 Player  前，建议所有客户首先阅读超级播放器的 [基本概念](https://cloud.tencent.com/document/product/266/61437) 和 [如何选择点播播放器](https://cloud.tencent.com/document/product/266/61437#choosePlayer) 选择适合自己的播放器类型。
@@ -7,7 +7,7 @@
 ## 核心优势
 ### 云端一体化服务
 超级播放器耦合强大的云点播音视频服务能力，打造强大的云端一体化能力，为用户业务提供更有价值的业务运营能力。
-### 全方位视频安全
+### 全方位视频安全[](id:safe)
 超级播放器支持防盗链、URL 鉴权、HLS 加密、私有协议加密、离线下载等视频安全方案，同时支持跑马灯，动态水印等视频安全能力，全方位保证用户媒体安全，满足业务不同场景的安全需求。
 ### 完整的数据支撑
 超级播放器支持全链路视频播放质量监控，包含播放性能、用户行为、文件特征等多维度数据指标，助力业务高效运营。
@@ -21,10 +21,10 @@
 超级播放器结合云点播平台提供的内容审核、媒资管理、无缝切换、首屏秒开互动浮窗等功能，常用于用户打造短视频相关场景，同时云点播提供[ 短视频 UGSC Demo](https://cloud.tencent.com/document/product/584) 供用户参考。
 
 ### 长视频播放
-超级播放器结合云点播的自适应码流、无缝清晰度切换、缩略图、截图、倍速播放等功能，长用户用户打造视频剧集和门户类场景，同时云点播提供 [视频播放方案](xxxx) 供用户参考。
+超级播放器结合云点播的自适应码流、无缝清晰度切换、缩略图、截图、倍速播放等功能，长视频用户打造视频剧集和门户类场景，同时云点播提供 [视频播放方案](#) 供用户参考。
 
 ### 视频版权保护
-超级播放器支持云点播的视频安全能力，支持私有协议加密、离线下载、跑马灯和防盗链等功能，助力用户保障自己视频安全，同时云点播提供 [视频安全方案教程](xxxx) 供用户参考。
+超级播放器支持云点播的视频安全能力，支持私有协议加密、离线下载、跑马灯和防盗链等功能，助力用户保障自己视频安全，同时云点播提供 [视频安全方案教程](#safe) 供用户参考。
 
 ### 直播录制
 超级播放器支持直播录制文件播放，同时支持直播时移回看、伪直播观看，在音视频直播点播场景下帮助用户打造一体化观看体验。
