--- a/product/互联网中间件/腾讯云微服务引擎/操作指南/服务治理中心操作指南/平台配置/创建引擎.md
+++ b/product/互联网中间件/腾讯云微服务引擎/操作指南/服务治理中心操作指南/平台配置/创建引擎.md
@@ -6,7 +6,7 @@
 ## 操作步骤
 
 1. 登录 [TSE 控制台](https://console.cloud.tencent.com/tse) 。
-2. 在 [服务治理中心-平台配置](https://console.cloud.tencent.com/tse/governance?rid=33) 页面，单击【新建】。
-3.  在【新建治理中心】页，根据自身业务需求选择相关信息。
-![](https://main.qcloudimg.com/raw/4a123b229a68c154a80ec52c0923187b.png)
-5. 单击【提交】，完成服务治理中心引擎创建。
+2. 在**治理中心**下的**平台配置**页面，找到目标命名空间，单击**新建**。
+3.  在**新建治理中心**页，根据自身业务需求选择相关信息。
+![](https://main.qcloudimg.com/raw/05dba2c16aa7a3fbfbfd22fcaadad194.jpg)
+4. 单击**提交**，完成服务治理中心引擎创建。
