--- a/product/互联网中间件/腾讯云微服务引擎/操作指南/服务治理中心操作指南/平台配置/销毁引擎.md
+++ b/product/互联网中间件/腾讯云微服务引擎/操作指南/服务治理中心操作指南/平台配置/销毁引擎.md
@@ -5,8 +5,9 @@
 
 
 ## 操作步骤
+>!服务治理中心引擎销毁后，治理中心服务不可用且数据销毁，该操作不可逆，请谨慎操作。
 
-1. 登录 [TSE 控制台](https://console.cloud.tencent.com/tse) 。
-2. 在 [服务治理中心-平台配置](https://console.cloud.tencent.com/tse/governance?rid=33) 页面，选择目标引擎，单击【删除】。
-![](https://main.qcloudimg.com/raw/9515026c4f9130f29cd576bc4f5d328c.png)
-5. 在二次确认弹窗界面单击【销毁】，完成服务治理中心引擎销毁。
+1. 登录 [TSE 控制台](https://console.cloud.tencent.com/tse)。
+2. 在**治理中心**下的**平台配置**页面，找到目标引擎，单击操作列的**删除**。
+![](https://main.qcloudimg.com/raw/60638b9265cd6b3736bdf0d57e61da89.png)
+3. 在二次确认弹窗界面单击**销毁**，完成服务治理中心引擎销毁。
