--- a/product/数据库/云数据库 CynosDB/白皮书/安全白皮书/审计和治理.md
+++ b/product/数据库/云数据库 CynosDB/白皮书/安全白皮书/审计和治理.md
@@ -1,4 +1,7 @@
 
-[数据库审计](https://cloud.tencent.com/document/product/672/55454) 能够实时记录腾讯云数据库活动，对数据库操作进行细粒度审计的合规性管理，对数据库遭受到的风险行为进行告警，针对数据库 SQL 注入、异常操作等数据库风险行为进行记录，为您的云数据库提供完善的安全诊断和管理功能，提高数据资产安全。
+云原生数据库 TDSQL-C 提供企业级的 [数据库审计](https://cloud.tencent.com/document/product/672/55454) 功能，其具有合规、安全、追溯等特性，符合国家相关规定，是用户通过等保合规的刚需产品。
 
+数据库审计通过对用户访问数据库行为的记录、分析，帮助用户事后生成安全合规审计报告，帮助用户及时发现风险行为，对违反安全策略的访问行为进行及时告警，保证数据库操作满足合规性要求，助力用户通过等保合规测评。
+
+>?综合功能和性能两方面的分析衡量，开启审计并进行全量审计时，对系统的性能损耗不超过5%。
 
