--- a/product/互联网中间件/腾讯云微服务引擎/操作指南/服务治理中心操作指南/平台配置/新增引擎集群.md
+++ b/product/互联网中间件/腾讯云微服务引擎/操作指南/服务治理中心操作指南/平台配置/新增引擎集群.md
@@ -7,8 +7,9 @@
 ## 操作步骤
 
 1. 登录 [TSE 控制台](https://console.cloud.tencent.com/tse) 。
-2. 在 [服务治理中心-平台配置](https://console.cloud.tencent.com/tse/governance?rid=33) 页面，选择目标服务治理中心引擎，进入基本信息页面。
-![](https://main.qcloudimg.com/raw/831407874f1fff372051ff2e3f2ea53e.png)
-4.  在基本信息页，新增引擎集群。
-![](https://main.qcloudimg.com/raw/31146f1727499a3889449a8741bcf4a8.png)
-5. 单击【添加】，完成为某一服务治理中心引擎新增集群。
+2. 在**治理中心**下的**平台配置**页面，单击目标服务治理中心引擎的 ID，进入基本信息页面。
+![](https://main.qcloudimg.com/raw/78b4983a470852451d1a93ea80ed9c3e.jpg)
+3. 在基本信息页，单击**新增引擎**集群。
+![](https://main.qcloudimg.com/raw/b77415323803b184ef4cabce68837dba.jpg)
+4. 单击**添加**，完成为某一服务治理中心引擎新增集群。
+![](https://main.qcloudimg.com/raw/79bb1538ff806ed6916478f675a52d45.jpg)
