--- a/product/互联网中间件/腾讯云微服务引擎/操作指南/服务治理中心操作指南/平台配置/删除引擎集群.md
+++ b/product/互联网中间件/腾讯云微服务引擎/操作指南/服务治理中心操作指南/平台配置/删除引擎集群.md
@@ -5,9 +5,10 @@
 
 
 ## 操作步骤
+>!删除后，集群不可用且无法恢复，请谨慎操作。
 
-1. 登录 [TSE 控制台](https://console.cloud.tencent.com/tse) 。
-2. 在 [服务治理中心-平台配置](https://console.cloud.tencent.com/tse/governance?rid=33) 页面，选择目标服务治理中心引擎，进入基本信息页面。
-![](https://main.qcloudimg.com/raw/831407874f1fff372051ff2e3f2ea53e.png)
-3.  在基本信息页，删除引擎集群。
-4. 单击【删除】，并在二次弹窗中确认删除，完成为某一服务治理中心引擎删除集群。
+1. 登录 [TSE 控制台](https://console.cloud.tencent.com/tse)。
+2. 在**治理中心**下的**平台配置**页面，单击目标服务治理中心引擎的 ID，进入基本信息页面。
+3. 在基本信息页，单击集群操作列的**删除**。
+![](https://main.qcloudimg.com/raw/d6a38fff46b114bb60fdd846c898da42.jpg)
+4. 在二次弹窗中确认删除，完成为某一服务治理中心引擎删除集群。
