--- a/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/布局.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/布局.md
@@ -1,28 +1,22 @@
-本文为您概述介绍在 KonisGraph 实例图数据管理平台的图分析中，如何进行图可视化分析的【布局】设置。
+本文为您概述介绍在 KonisGraph 实例图数据管理平台的图分析中，如何进行图可视化分析的布局设置。
 
-## 布局概述
-在图可视分析的布局设置中，用户可以自定义显示【标签】、【标签属性名】、【缩略图】【Tooltip】等，可以自定义绘图区的显示布局，例如力导布局、环形布局、辐射状布局、层次布局、同心圆布局、纵横布局等。
-
+在图可视分析的布局设置中，用户可以自定义显示标签、标签属性名、缩略图、Tooltip 等，可以自定义绘图区的显示布局，例如，力导布局、环形布局、辐射状布局、层次布局、同心圆布局、纵横布局等。
 
 ## 基础设置
 ### 节点标签
 是否显示节点下方的文字标签。
-
 ![](https://main.qcloudimg.com/raw/70d7bfc5814e524e4509b1cef57890e7.png)
 
 ### 节点标签属性名
 显示节点下方的文字标签使用的节点属性名。
-
 ![](https://main.qcloudimg.com/raw/190c287bfc3e3bd986920c3be84e1013.png)
 
 ### 缩略图
 是否启用缩略图。
-
 ![](https://main.qcloudimg.com/raw/be8e1f96fd9b349a83d4108334cbcd3f.png)
 
 ### Tooltip
-是否启用点边的Tooltip。
-
+是否启用点边的 Tooltip。
 ![](https://main.qcloudimg.com/raw/48f60811e5f2ba6939c7777de8de84f8.png)
 
 ## 布局设置
@@ -31,10 +25,9 @@
 
 ### 布局方式
 #### 力导布局
- 一个布局网络中，粒子与粒子之间具有引力和斥力，从初始的随机无序的布局不断演变，逐渐趋于平衡稳定的布局方式称之为力导向布局。适用于描述事物间关系，比如人物关系、计算机网络关系等。
+一个布局网络中，粒子与粒子之间具有引力和斥力，从初始的随机无序的布局不断演变，逐渐趋于平衡稳定的布局方式称之为力导向布局。适用于描述事物间关系，如人物关系、计算机网络关系等。
 
 ##### 效果演示
-
 ![](https://main.qcloudimg.com/raw/cd2e97f17287027f5465f00628bf9d60.png)
 
 ##### 配置属性
@@ -45,11 +38,10 @@
 |Link Distance|边的长度|
 |Node Strength|节点作用力，正数代表节点之间的引力作用，负数代表节点之间的斥力作用|
 |Prevent Overlap|是否防止重叠|
-|Node Spacing|preventOverlap  为 true 时生效, 防止重叠时节点边缘间距的最小值|
+|Node Spacing|Prevent Overlap 为 true 时生效，防止重叠时节点边缘间距的最小值|
 
 #### 环形布局
 ##### 效果演示
-
 ![](https://main.qcloudimg.com/raw/50e017fa76c6b4a1f665323eea89e6f6.png)
 
 ##### 配置属性
@@ -58,12 +50,11 @@
 | :--------- | :----- |
 |Radius|圆的半径|
 |Divisions|节点在环上的分段数|
-|Angle Ratio|从第一个节点到最后节点之间相隔多少个 2*PI|
+|Angle Ratio|从第一个节点到最后节点之间相隔多少个 2 * PI|
 |Ordering|节点在环上排序的依据|
 
 #### 辐射状布局
 ##### 效果演示
-
 ![](https://main.qcloudimg.com/raw/f5c03bbf2abb63fe2075bfeb655b130c.png)
 
 ##### 配置属性
@@ -74,11 +65,10 @@
 |Link Distance|边的长度|
 |Unit Radius|每一圈距离上一圈的距离|
 |Prevent Overlap|是否防止重叠|
-|Node Spacing|preventOverlap  为 true 时生效, 防止重叠时节点边缘间距的最小值|
+|Node Spacing|Prevent Overlap 为 true 时生效, 防止重叠时节点边缘间距的最小值|
 
 #### 层次布局
 ##### 效果演示
-
 ![](https://main.qcloudimg.com/raw/d40c71eb07d405699b4508e195d8db57.png)
 
 ##### 配置属性
@@ -92,7 +82,6 @@
 
 #### 同心圆布局
 ##### 效果演示
-
 ![](https://main.qcloudimg.com/raw/eb6e711bac82f5ca90c29e151ec533ee.png)
 
 ##### 配置属性
@@ -103,13 +92,12 @@
 |Sweep|第一个节点与最后一个节点之间的弧度差|
 |Start Angle|开始方式节点的弧度|
 |Prevent Overlap|是否防止重叠|
-|Node Spacing|preventOverlap  为 true 时生效, 防止重叠时节点边缘间距的最小值|
+|Node Spacing|Prevent Overlap 为 true 时生效, 防止重叠时节点边缘间距的最小值|
 |Equidistant|环与环之间的距离是否相等|
 |Clock Wise|是否顺时针排列|
 
 #### 纵横布局
 ##### 效果演示
-
 ![](https://main.qcloudimg.com/raw/e34031a6e9d1e5ec4cd9d1673ce3b099.png)
 
 ##### 配置属性
@@ -120,4 +108,5 @@
 |Rows|网格的行数|
 |Cols|网格的列数|
 |Prevent Overlap|是否防止重叠|
-|Node Spacing|preventOverlap  为 true 时生效, 防止重叠时节点边缘间距的最小值|
+|Node Spacing|Prevent Overlap 为 true 时生效, 防止重叠时节点边缘间距的最小值|
+
