--- a/product/大数据与AI/腾讯觅影开放实验平台/操作指南/放射数据.md
+++ b/product/大数据与AI/腾讯觅影开放实验平台/操作指南/放射数据.md
@@ -4,7 +4,7 @@
 
 ## 放射数据
 ### 新建项目
-1. 登陆 [腾讯觅影开放实验平台控制台](https://console.cloud.tencent.com/taop/project-item) ，单击**放射数据**，进入放射数据页面。
+1. 登录 [腾讯觅影开放实验平台控制台](https://console.cloud.tencent.com/taop/project-item) ，单击**放射数据**，进入放射数据页面。
 2. 在左侧右上角界面，单击**新建项目**。
 3. 进入新建项目页面后，弹出**数据上传服务协议**，阅读同意本协议，单击**下一步**。
 4. 在新建项目页，填写：
