--- a/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/查询.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/查询.md
@@ -1,8 +1,7 @@
-本文为您概述介绍在 KonisGraph 实例图数据管理平台的图分析中，如何进行图可视化分析的【查询】。
+本文为您概述介绍在 KonisGraph 实例图数据管理平台的图分析中，如何进行图可视化分析的查询。
 
 ## 图查询概述
 在图可视分析系统，图查询支持可视化表达式进行查询，表达式可以用个逻辑运算组合，进行点边查询。
-
 ![](https://main.qcloudimg.com/raw/e75d6ff71f4069e1f0672fa23af13adf.png)
 
 表达式的计算操作类型有：
@@ -18,26 +17,26 @@
 |starts with|以...开头|
 |is null or empty|不为空|
 
-
 ## 点查询
-点查询指的通过表达式查询出图中的点集合A，再过滤出起点和终点都存在于点集合A的边集合B，点集合A和边集合B组成的图即为最终查询结果。
+点查询指的通过表达式查询出图中的点集合 A，再过滤出起点和终点都存在于点集合 A 的边集合 B，点集合 A 和边集合 B 组成的图即为最终查询结果。
 
-点查询类型有：
+点查询类型：
 
 |类型|描述|
 | :--------- | :----- |
 |点属性|通过点的属性查询|
-|点ID|通过点的唯一ID查询|
+|点 ID|通过点的唯一 ID 查询|
 
 ## 边查询
-边查询指的通过表达式查询出图中的边集合A，再计算出边集合A中所有边的起点和终点的点集合B，边集合A和点集合B组成的图即为最终查询结果。
+边查询指的通过表达式查询出图中的边集合 A，再计算出边集合 A 中所有边的起点和终点的点集合 B，边集合 A 和点集合 B 组成的图即为最终查询结果。
 
-边查询类型有：
+边查询类型：
 
 |类型|描述|
 | :--------- | :----- |
 |边属性|通过边的属性查询|
-|源点ID|通过源点的唯一ID查询|
-|终点ID|通过终点的唯一ID查询|
+|源点 ID|通过源点的唯一 ID 查询|
+|终点 ID|通过终点的唯一 ID 查询|
 |源点属性|通过源点的属性查询|
 |终点属性|通过终点的属性查询|
+
