--- a/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/布局.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/布局.md
@@ -1,5 +1,6 @@
 本文为您概述介绍在 KonisGraph 实例图数据管理平台的图分析中，如何进行图可视化分析的布局设置。
 
+## 布局概述
 在图可视分析的布局设置中，用户可以自定义显示标签、标签属性名、缩略图、Tooltip 等，可以自定义绘图区的显示布局，例如，力导布局、环形布局、辐射状布局、层次布局、同心圆布局、纵横布局等。
 
 ## 基础设置
@@ -38,7 +39,7 @@
 |Link Distance|边的长度|
 |Node Strength|节点作用力，正数代表节点之间的引力作用，负数代表节点之间的斥力作用|
 |Prevent Overlap|是否防止重叠|
-|Node Spacing|Prevent Overlap 为 true 时生效，防止重叠时节点边缘间距的最小值|
+|Node Spacing|Prevent Overlap 为 true 时生效，节点边缘间距的最小值，以防止重叠 |
 
 #### 环形布局
 ##### 效果演示
@@ -65,7 +66,7 @@
 |Link Distance|边的长度|
 |Unit Radius|每一圈距离上一圈的距离|
 |Prevent Overlap|是否防止重叠|
-|Node Spacing|Prevent Overlap 为 true 时生效, 防止重叠时节点边缘间距的最小值|
+|Node Spacing|Prevent Overlap 为 true 时生效，节点边缘间距的最小值，以防止重叠|
 
 #### 层次布局
 ##### 效果演示
@@ -92,7 +93,7 @@
 |Sweep|第一个节点与最后一个节点之间的弧度差|
 |Start Angle|开始方式节点的弧度|
 |Prevent Overlap|是否防止重叠|
-|Node Spacing|Prevent Overlap 为 true 时生效, 防止重叠时节点边缘间距的最小值|
+|Node Spacing|Prevent Overlap 为 true 时生效，节点边缘间距的最小值，以防止重叠|
 |Equidistant|环与环之间的距离是否相等|
 |Clock Wise|是否顺时针排列|
 
@@ -108,5 +109,5 @@
 |Rows|网格的行数|
 |Cols|网格的列数|
 |Prevent Overlap|是否防止重叠|
-|Node Spacing|Prevent Overlap 为 true 时生效, 防止重叠时节点边缘间距的最小值|
+|Node Spacing|Prevent Overlap 为 true 时生效，节点边缘间距的最小值，以防止重叠|
 
