--- a/product/计算与网络/负载均衡/负载均衡实例/访问日志仪表盘.md
+++ b/product/计算与网络/负载均衡/负载均衡实例/访问日志仪表盘.md
@@ -21,7 +21,7 @@ PV 示例如下
 您已成功创建日志主题，操作步骤请参见 [创建日志集和日志主题](https://cloud.tencent.com/document/product/214/55139#step2)。
 
 ## 操作步骤
-1. 登录 [负载均衡控制台](https://console.cloud.tencent.com/clb)，选择左侧导航栏的【访问日志】>【仪表盘】。
+1. 登录 [负载均衡控制台](https://console.cloud.tencent.com/clb)，选择左侧导航栏的**访问日志** > **仪表盘**。
 2. 在“访问日志仪表盘”页面，选择所在地域和日志主题，自动显示出该日志主题对应的仪表盘。
 3. （可选）在“访问日志仪表盘”页面的“过滤项”区域右上角，单击铅笔图标可以编辑过滤项，仪表盘可根据您设置的过滤项过滤访问日志并显示。
 
