--- a/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/外观.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/外观.md
@@ -10,7 +10,7 @@
 ![](https://main.qcloudimg.com/raw/cbe6e2f4e8b2b36714373efe9becea44.png)
 
 ### 内置属性
-其中下列属性为系统属性，可在统计面板生成，详见 [统计文档]()。
+其中下列属性为系统属性，可在统计面板生成，详见 [统计](https://cloud.tencent.com/document/product/1366/61455)。
 
 |属性名称|描述|生成方式|
 | :--------- | :----- | :---------- |
