--- a/product/计算与网络/负载均衡/监控与告警/监控指标说明.md
+++ b/product/计算与网络/负载均衡/监控与告警/监控指标说明.md
@@ -1,6 +1,6 @@
 云监控从运行状态下的负载均衡实例中收集原始数据，并将数据展示为易读的图标形式。统计数据默认保存一个月，您可以观察实例一个月的运行情况，从而更好地了解应用服务的运行情况。
 
-建议您通过 [云监控控制台](https://console.cloud.tencent.com/monitor/overview) 查看负载均衡的监控，选择【云产品监控】>[【负载均衡-CLB】](https://console.cloud.tencent.com/monitor/clb)，单击负载均衡实例 ID，进入监控详情页，查看该负载均衡实例的监控数据，展开实例即可查看监听器、后端服务器等的监控信息。
+建议您通过 [云监控控制台](https://console.cloud.tencent.com/monitor/overview) 查看负载均衡的监控，选择**云产品监控** > [**负载均衡-CLB**](https://console.cloud.tencent.com/monitor/clb)，单击负载均衡实例 ID，进入监控详情页，查看该负载均衡实例的监控数据，展开实例即可查看监听器、后端服务器等的监控信息。
 
 ## 负载均衡实例维度
 >?入带宽利用率和出带宽利用率监控指标除东京和曼谷地域不支持，其余地域均已支持，并且这两项指标仅标准账户类型支持，判断账户类型的方式请参见 [判断账户类型](https://cloud.tencent.com/document/product/1199/49090#judge)。
