--- a/product/数据库/图数据库EasyGraph/快速入门/连接实例.md
+++ b/product/数据库/图数据库EasyGraph/快速入门/连接实例.md
@@ -177,7 +177,7 @@ gremlin> g.addE("created").from(g.V().has("name", "josh")).to(g.V().has("name", 
 gremlin>
 ```
 
-#### 查询点边和属性数据
+#### [查询点边和属性数据](id:cxdbhsxsj)
 ```bash
 gremlin> g.V(1).values('name')
 ==>marko
