--- a/product/数据库/图数据库EasyGraph/图数据管理/图分析/图数据查询.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图分析/图数据查询.md
@@ -10,7 +10,7 @@
 
 ## 图数据在线查询
 图数据查询区可使用 Gremlin 语句，在线查询图数据库 KonisGraph 实例中的数据。输入 Gremlin 语句，如 `g.V(1).out('knows').has('age', gt(30)).values('name')`。
-Gremlin 语法可参考 [Gremlin兼容性](      fsadfsad  )。
+Gremlin 语法可参考 [Gremlin兼容性](https://cloud.tencent.com/document/product/1366/61174#cxdbhsxsj)。
 <img src="https://main.qcloudimg.com/raw/a0412421dcb747faae19caf8fbbefe01.png"  style="zoom:80%;">
 
 
