--- a/product/计算与网络/容器镜像服务/最佳实践/全球多地域间同步镜像实现就近访问.md
+++ b/product/计算与网络/容器镜像服务/最佳实践/全球多地域间同步镜像实现就近访问.md
@@ -2,20 +2,20 @@
 当企业将容器业务拓展至多个地域时，希望能够就近拉取容器镜像，以提高拉取速度，降低跨地域公网流量成本；或需要在多个地域内实现热备份，以及在同个地域内多个镜像仓库服务间传递镜像，如跨团队共享，从开发仓库流转至生产仓库等。上述场景下，常规最佳实践是在一个或多个地域内同时创建并维护多个容器镜像仓库服务（Docker Registry），并编写脚本调用 Docker Push/Pull 实现跨仓库复制镜像。容器镜像服务 TCR 企业版同时提供容器镜像跨实例按需同步和单实例多地复制的能力，用户可灵活选择或结合使用两项能力，满足上述场景的需求。其中，两项能力具有如下优势：
 
 #### 实例同步
-在多个实例间（可在同一地域或多个地域）间自动按需同步指定镜像
-- 按需同步，基于自定义规则实现对目标实例，需要同步镜像的精确匹配选择
-- 自动同步，需要同步的镜像推送至源实例后，自动触发同步至目标实例
-- 跨主账号同步，可在同一集团内多个主账号下的实例间同步公共镜像
-- Helm Chart 及容器镜像筛选，可选仅同步一种类型的云原生制品
-- 可查询同步日志，并可与触发器配合使用，实现同步成功事件周知
+在多个实例间（可在同一地域或多个地域）间自动按需同步指定镜像。
+- 按需同步，基于自定义规则实现对目标实例，需要同步镜像的精确匹配选择。
+- 自动同步，需要同步的镜像推送至源实例后，自动触发同步至目标实例。
+- 跨主账号同步，可在同一集团内多个主账号下的实例间同步公共镜像。
+- Helm Chart 及容器镜像筛选，可选仅同步一种类型的云原生制品。
+- 可查询同步日志，并可与触发器配合使用，实现同步成功事件周知。
 
 #### 实例复制
-为单个实例在多个地域内配置副本（子实例）并提供就近访问能力
-- 单一实例，多个地域内访问时，可使用同一个镜像仓库/版本名称，保持容器配置统一
-- 就近访问，在多地域部署场景中，就近拉取同地域内镜像数据，提高部署的效率及稳定性
-- 降低成本，就近内网拉取镜像可避免跨地域访问镜像仓库带来的公网流量费用或专线费用
-- 简化管理，无需管理多个实例，并配置实例间的同步规则，无需关心指定镜像的同步状态
-- 高速同步，镜像 Layer 数据实时跨地域流式复制，可实现单地镜像推送，即可多地域拉取
+为单个实例在多个地域内配置副本（子实例）并提供就近访问能力。
+- 单一实例，多个地域内访问时，可使用同一个镜像仓库/版本名称，保持容器配置统一。
+- 就近访问，在多地域部署场景中，就近拉取同地域内镜像数据，提高部署的效率及稳定性。
+- 降低成本，就近内网拉取镜像可避免跨地域访问镜像仓库带来的公网流量费用或专线费用。
+- 简化管理，无需管理多个实例，并配置实例间的同步规则，无需关心指定镜像的同步状态。
+- 高速同步，镜像 Layer 数据实时跨地域流式复制，可实现单地镜像推送，即可多地域拉取。
 
 ## 使用案例
 ### 场景1：出海业务实现全球多地域就近访问
