--- a/product/域名与网站/SSL 证书/证书安装/证书安装指引/国际标准证书安装/宝塔面板证书安装.md
+++ b/product/域名与网站/SSL 证书/证书安装/证书安装指引/国际标准证书安装/宝塔面板证书安装.md
@@ -19,18 +19,18 @@
  - 文件夹内容：
     - `1_cloud.tencent.comt_bundle.crt` 证书文件
     - `2_cloud.tencent.comt.key` 私钥文件
-2. 登录宝塔 Web 面板，单击【网站】，即可进入 “网站管理” 页面。
+2. 登录宝塔 Web 面板，单击**网站**，即可进入 “网站管理” 页面。
 >?若您未安装宝塔面板，您可以参考文档 [安装宝塔面板](https://cloud.tencent.com/document/product/213/45550)。
 >
-3. 在 “网站管理” 页面中选择您需要配置 SSL 证书的域名对应的站点并单击【设置】。如下图所示：
+3. 在 “网站管理” 页面中选择您需要配置 SSL 证书的域名对应的站点并单击**设置**。如下图所示：
 ![](https://main.qcloudimg.com/raw/ec39026bd8621932f8e204c8775a0c1e.png)
-4. 在弹出的“ 站点修改” 窗口中，依次单击【SSL】>【其他证书】，填写密钥以及证书文件。如下图所示：
+4. 在弹出的“ 站点修改” 窗口中，依次单击 **SSL > 其他证书**，填写密钥以及证书文件。如下图所示：
 >?无论宝塔面板实际用的是 IIS、Apache 或 Nginx，都可用 Nginx 目录下的两个文件，宝塔面板将会自动处理。
 >
 ![](https://main.qcloudimg.com/raw/4eb49ba74092e92d7f483643b96db7b6.png)
  - 密钥（KEY）：使用文本编辑器打开 .key 私钥文件，并复制内容至对应区域，
  - 证书（PEM 格式）：使用文本编辑器打开 .crt 证书文件，并复制内容至对应区域。
-5. 单击【保存】并显示以下信息，即可部署成功。如下图所示：
+5. 单击**保存**并显示以下信息，即可部署成功。如下图所示：
 ![](https://main.qcloudimg.com/raw/c838c73979da8c445a862e810883ac21.png)
 6. 部署成功后，即可使用 `https://cloud.tencent.com` 进行访问。
 
@@ -38,6 +38,6 @@
 
 >?HTTP 跳转 HTTPS 过程中，如果您的网站元素中存在外部链接或者使用的 HTTP 协议，导致整个页面不完全是 HTTPS 协议。部分浏览器会因为这些因素报不安全的提示，例如，链接不安全。您可以单击不安全页面中的 “详细信息” 查看报错原因。
 >
-1. 请在弹出的 “站点修改” 窗口，单击开启【强制 HTTPS】即可完成配置。如下图所示：
+1. 请在弹出的 “站点修改” 窗口，单击开启**强制 HTTPS** 即可完成配置。如下图所示：
 ![](https://main.qcloudimg.com/raw/64a5f24b53c2d3679418354c10ac4f37.png)
 2. 您可以使用 `http://cloud.tencent.com` 进行访问。
