--- a/product/视频服务/点播/播放器 SDK 手册/播放器综述.md
+++ b/product/视频服务/点播/播放器 SDK 手册/播放器综述.md
@@ -18,13 +18,13 @@
 
 ## 常见场景
 ### 短视频播放
-超级播放器结合云点播平台提供的内容审核、媒资管理、无缝切换、首屏秒开互动浮窗等功能，常用于用户打造短视频相关场景，同时云点播提供[ 短视频 UGSC Demo](https://cloud.tencent.com/document/product/584) 供用户参考。
+超级播放器结合云点播平台提供的内容审核、媒资管理、无缝切换、首屏秒开互动浮窗等功能，常用于用户打造短视频相关场景，同时云点播提供[ 短视频 UGSC Demo](https://cloud.tencent.com/document/product/584/55287) 供用户参考。
 
 ### 长视频播放
-超级播放器结合云点播的自适应码流、无缝清晰度切换、缩略图、截图、倍速播放等功能，长视频用户打造视频剧集和门户类场景，同时云点播提供 [视频播放方案](#) 供用户参考。
+超级播放器结合云点播的自适应码流、无缝清晰度切换、缩略图、截图、倍速播放等功能，长视频用户打造视频剧集和门户类场景，同时云点播提供 [视频播放方案](https://cloud.tencent.com/document/product/266/45539) 供用户参考。
 
 ### 视频版权保护
-超级播放器支持云点播的视频安全能力，支持私有协议加密、离线下载、跑马灯和防盗链等功能，助力用户保障自己视频安全，同时云点播提供 [视频安全方案教程](#safe) 供用户参考。
+超级播放器支持云点播的视频安全能力，支持私有协议加密、离线下载、跑马灯和防盗链等功能，助力用户保障自己视频安全，同时云点播提供 [视频安全方案教程](https://cloud.tencent.com/document/product/266/45552) 供用户参考。
 
 ### 直播录制
 超级播放器支持直播录制文件播放，同时支持直播时移回看、伪直播观看，在音视频直播点播场景下帮助用户打造一体化观看体验。
@@ -33,7 +33,7 @@
 ## SDK下载
 您可以体验播放器 Demo，更多信息，请参见 [Demo 体验](https://cloud.tencent.com/document/product/266/58693)。
 您可以下载对应的 SDK 进行集成操作，更多信息，请参见 [SDK 下载](https://cloud.tencent.com/document/product/266/61438)。
-您可以通过 [功能列表](https://cloud.tencent.com/document/product/266/61438#functionList)，查询超级播放器是否满足自己的能力需求。
+您可以通过 [功能列表](https://cloud.tencent.com/document/product/266/61460#functionList)，查询超级播放器是否满足自己的能力需求。
 
 ## 接入指引
 为了帮助您快速接入超级播放器，我们为您提供了超级播放器 接入指引，以示例的方式为您讲解接入步骤。
