--- a/product/视频服务/移动直播/API文档/iOS&Mac/V2概览.md
+++ b/product/视频服务/移动直播/API文档/iOS&Mac/V2概览.md
@@ -112,7 +112,7 @@
 
 | API   | 描述                   |
 | --------------- | --------------------------------------------------- |
-| [setVideoQuality](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__V2TXLivePusher__ios.html#a0b08436c1e14a8d7d9875fae59ac6d84) | 设置推流视频分辨率，以及宽高比模式（横屏 / 竖屏）。 |
+| [setVideoQuality](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__V2TXLivePusher__ios.html#aa0185a41505a38ad458f9ccf762de4fc) | 设置推流视频编码参数。 |
 | [setRenderRotation](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__V2TXLivePusher__ios.html#a953256f3f232eb24e18c54f0d5ef0eaa) | 设置本地摄像头预览画面的旋转角度。      |
 | [setRenderMirror](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__V2TXLivePusher__ios.html#adf4cd57c705a1022d6730fd722f8dab5) | 设置本地摄像头预览镜像。     |
 | [startCamera](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__V2TXLivePusher__ios.html#aa0b3bda940078de28d0350e9f57910a4)                     | 打开本地摄像头。       |
