--- a/product/视频服务/移动直播/API文档/Android/V2概览.md
+++ b/product/视频服务/移动直播/API文档/Android/V2概览.md
@@ -114,7 +114,7 @@
 
 | API                          | 描述                |
 | --------------- | --------------------------------------------------- |
-| [setVideoQuality](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__V2TXLivePusher__android.html#a2695806cb6c74ccce4b378d306ef0a02) | 设置推流视频分辨率，以及宽高比模式（横屏 / 竖屏）。 |
+| [setVideoQuality](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__V2TXLivePusher__android.html#ae678ad67285baf08852712abee2e3cc5) | 设置推流视频编码参数。 |
 | [setRenderRotation](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__V2TXLivePusher__android.html#aa08046b0f429f318f36249fa9d0276f2) | 设置本地摄像头预览画面的旋转角度。        |
 | [setRenderMirror](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__V2TXLivePusher__android.html#afd909d85fd0dda0db4078692b319681f) | 设置本地摄像头预览镜像。      |
 | [startCamera](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__V2TXLivePusher__android.html#aefa5da30143194b8cf4b4d44b0388809)                  | 打开本地摄像头。    |
