--- a/product/视频服务/点播/播放器 SDK 手册/基本概念.md
+++ b/product/视频服务/点播/播放器 SDK 手册/基本概念.md
@@ -6,10 +6,10 @@
 FileId 为媒体文件 ID，即该文件在云点播上的全局唯一标识符，在上传成功后由云点播后台分配。可以在 [视频上传完成事件通知](https://cloud.tencent.com/document/product/266/7830) 或 [云点播控制台](https://console.cloud.tencent.com/vod) 获取该字段。**云点播仅支持通过 Fileid 播放的媒体文件获取数据监控和统计分析相关能力**。
 
 ### 超级播放器
-超级播放器为腾讯云点播团队推出的，基于腾讯云强大的后台能力与 AI 技术，为客户提供视频点播播放能力的强大播放载体。超级播放器深度融合腾讯云点播服务，拥有流畅稳定的播放性能，覆盖多类应用场景的解决方案，满足客户多样需求，让客户轻松聚焦于业务发展本身，畅享极速高清播放新体验。如果您想要快速接入超级播放器，请参见 [快速入门](xxxx)。
+超级播放器为腾讯云点播团队推出的，基于腾讯云强大的后台能力与 AI 技术，为客户提供视频点播播放能力的强大播放载体。超级播放器深度融合腾讯云点播服务，拥有流畅稳定的播放性能，覆盖多类应用场景的解决方案，满足客户多样需求，让客户轻松聚焦于业务发展本身，畅享极速高清播放新体验。如果您想要快速接入超级播放器，请参见 [快速入门](https://cloud.tencent.com/document/product/266/46217)。
 
 ### 超级播放器 Adapter
-超级播放器 Adapter 为腾讯云点播团队推出的，针对拥有自研播放器或已使用第三方播放器的用户，提供接入云点播平台服务能力的一个插件，用户可以通过超级播放器 Adapter 的接入和使用打造拥有腾讯云点播后台能力的自有/第三方播放器。如果您想要快速接入超级播放器 Adapter，请参见 [快速入门](xxxx)。
+超级播放器 Adapter 为腾讯云点播团队推出的，针对拥有自研播放器或已使用第三方播放器的用户，提供接入云点播平台服务能力的一个插件，用户可以通过超级播放器 Adapter 的接入和使用打造拥有腾讯云点播后台能力的自有/第三方播放器。如果您想要快速接入超级播放器 Adapter，请参见各端集成文档。
 
 ## 如何选择播放器
 [](id:choosePlayer)
