--- a/product/域名与网站/域名注册/域名服务/腾讯企业邮箱注册域名转入腾讯云.md
+++ b/product/域名与网站/域名注册/域名服务/腾讯企业邮箱注册域名转入腾讯云.md
@@ -3,7 +3,9 @@
 
 
 ## 前提条件
-已在腾讯企业邮成功注册域名。具体操作请参考 [添加企业域名](https://cloud.tencent.com/document/product/613/46021)。
+- 已在腾讯企业邮成功注册域名。具体操作请参考 [添加企业域名](https://cloud.tencent.com/document/product/613/46021)。
+- 已注册成功注册腾讯云账号。具体操作请参考[注册腾讯云](https://cloud.tencent.com/document/product/1263/46191)。
+- 注册的腾讯云账号已完成账号实名认证。具体操作请参考[账号实名认证](https://cloud.tencent.com/document/product/378/3629)。
 
 ## 操作步骤
 1. 使用管理员账号登录 [腾讯企业邮管理端](https://exmail.qq.com/login)。
