--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/对象管理/还原历史版本对象.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/对象管理/还原历史版本对象.md
@@ -2,9 +2,11 @@
 
 您可以通过对象存储控制台，还原对象的历史版本为最新版本。本文介绍如何在控制台对存储桶对象的历史版本进行还原。关于版本控制的更多介绍，请参见 [版本控制概述](https://cloud.tencent.com/document/product/436/19883)。
 
->? 还原对象是指将历史版本还原为最新版本，并且历史版本仍保留。
-> 若您需要删除历史版本，请查看 [设置版本控制](https://cloud.tencent.com/document/product/436/19881)、[删除对象](https://cloud.tencent.com/document/product/436/13323) 操作。
->
+>? 
+>- 还原对象指将历史版本还原为最新版本，并且历史版本仍保留。
+>- 若您需要删除历史版本，请查看 [设置版本控制](https://cloud.tencent.com/document/product/436/19881)、[删除对象](https://cloud.tencent.com/document/product/436/13323) 操作。
+>- 支持单个对象还原操作，不支持批量还原。
+
 
 ## 使用须知
 
@@ -12,14 +14,12 @@
 - 适用场景：
  - 已开启版本控制的存储桶，支持还原对象操作。
  - 开启版本控制后又关闭版本控制的存储桶，不支持还原对象操作。
- - 未开启版本控制的存储桶，不支持还原对象操作。
+ - 未曾开启版本控制的存储桶，不支持还原对象操作。
 - 还原规则：
 	- 历史版本：支持还原。
 	- 最新版本：无法还原。
 	- 带有删除标记版本：无法还原。
-- 还原说明：
- - 支持单个对象还原操作，不支持批量操作。
- - 被还原的对象
+
 
 ## 前提条件
 
@@ -35,5 +35,6 @@
 ![](https://main.qcloudimg.com/raw/b9daff0905452022a6e4f7b6500d930a.png)
 6. 在还原文件弹框中，检查还原对象的版本信息。确认无误后，单击【确定】即可。
 ![](https://main.qcloudimg.com/raw/c557e71ddc62ac0acad67d32288b5810.png)
-7. 至此，还原对象操作完成。在文件类别中可以看到，历史版本已被还原完成。
+7. 至此，还原对象操作完成。在文件列表中可以看到，历史版本已被成功还原。
 ![](https://main.qcloudimg.com/raw/1635abadf5f7d1845139445c5c9b5ec1.png)
+
