--- a/product/视频服务/播放器/快速入门/快速入门.md
+++ b/product/视频服务/播放器/快速入门/快速入门.md
@@ -45,7 +45,7 @@
 </ul></td>
 </tr><tr>
 <td>定制开发</td>
-<td>提供了最通用的播放器功能，如果不能满足需求，您可以自行修改播放代码。<br>如果您对播放的定制不仅限于 UI，需要进行更深层次的定制，您可以参考定制开发内容，了解播放器更底层的用法。</td>
+<td>超级播放器提供了最通用的播放器功能，如果不能满足需求，您可以自行修改播放代码。<br>如果您对播放的定制不仅限于 UI，需要进行更深层次的定制，您可以参考定制开发内容，了解播放器更底层的用法。</td>
 <td><ul style="margin:0">
 	<li/><a href="https://cloud.tencent.com/document/product/881/20210">iOS 定制开发</a> 
 	<li/><a href="https://cloud.tencent.com/document/product/881/20215">Android 定制开发</a>
