--- a/product/视频服务/视立方·音视频终端引擎/7-操作实践/播放器/点播播放/点播播放综述.md
+++ b/product/视频服务/视立方·音视频终端引擎/7-操作实践/播放器/点播播放/点播播放综述.md
@@ -90,7 +90,7 @@
    <tr>
       <th  style="text-align:center" width=15%>功能</td>
       <th  style="text-align:center">功能描述</td>
-      <th  style="text-align:center" width=17%>其他说明</td>
+      <th  style="text-align:center" width=17%>具体说明</td>
    </tr>
    <tr>
       <td style="text-align:center">视频加密</td>
