--- a/product/互联网中间件/TDMQ CMQ 版/03 快速入门/队列模型快速入门.md
+++ b/product/互联网中间件/TDMQ CMQ 版/03 快速入门/队列模型快速入门.md
@@ -30,7 +30,7 @@
 
 ### 步骤2：使用 SDK 收发消息
 
-1. [下载 Demo]() 并解压。
+1. [下载 Demo](https://github.com/tencentyun/cmq-java-tcp-sdk) 并解压。
 2. 配置生产消息程序 ProducerDemo.java 参数。
    ```java
     Producer producer = new Producer();
