--- a/product/互联网中间件/TDMQ CMQ 版/03 快速入门/主题模型快速入门（未兼容，自测中）.md
+++ b/product/互联网中间件/TDMQ CMQ 版/03 快速入门/主题模型快速入门（未兼容，自测中）.md
@@ -45,7 +45,7 @@
 
 ### 步骤3：使用 SDK 收发消息
 
-1. [下载 Demo]() 并解压。
+1. [下载 Demo](https://github.com/tencentyun/cmq-java-tcp-sdk) 并解压。
 
 2. 配置生产消息程序 PublishDemo.java 参数。
 
