--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/06 死信队列.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/06 死信队列.md
@@ -2,13 +2,13 @@
 
 ## 功能介绍
 
-死信队列（Dead-Letter-Queue，DLQ）用于处理无法被正常消费的消息。达到最大重试次数后，若消费依然失败，则表明消费者在正常情况下无法正确地消费该消息，此时 CMQ 不会立刻将消息丢弃，而是将其发送到该消费者对应的特殊队列中，这个特殊队列就是 DLQ。对新建的队列，或存量的队列，您都可以启用死信队列。
+死信队列（Dead-Letter-Queue，DLQ）用于处理无法被正常消费的消息。达到最大重试次数后，若消费依然失败，则表明消费者在正常情况下无法正确地消费该消息，此时 TDMQ CMQ 版不会立刻将消息丢弃，而是将其发送到该消费者对应的特殊队列中，这个特殊队列就是 DLQ。对新建的队列，或存量的队列，您都可以启用死信队列。
 
 ## 应用场景
 
 - **定位问题**：例如，某条消息被多次消费后却未被删除，一般是由于该消息未被正确消费，可能存在问题需要回溯定位。 您可以设置最大接收次数，超额后该消息会被淘汰到指定的死信队列，便于后续问题发现。
 
-- **优先级队列**：例如，共享单车等 O2O 客户，对访问时延、实时性要求非常高。单车开锁逻辑中，当 CMQ 堆积了1亿条消息时，会优先处理最新生产的部分消息，老的消息淘汰到死信队列，在消费者有能力时再处理。
+- **优先级队列**：例如，共享单车等 O2O 客户，对访问时延、实时性要求非常高。单车开锁逻辑中，当 TDMQ CMQ 版堆积了1亿条消息时，会优先处理最新生产的部分消息，老的消息淘汰到死信队列，在消费者有能力时再处理。
 老的消息（如用户扫码开车场景）在等待时已流失了用户，老的消息的价值会偏小，建议优先处理最新消息。
 
 ## 使用方法
