--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/02 主题订阅/01 主题管理.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/02 主题订阅/01 主题管理.md
@@ -17,7 +17,7 @@
    |---------|---------|
    | 主题名 | <li>输入 Topic 名称，该名称一旦创建后不能修改。</li><li>以字母起始，只能包含字母、数字、“-”及“_”，最大64字符；名称严格区分大小写，为了防止混淆，不允许创建大小写同名主题。</li> |
    | <nobr>消息堆积</nobr> | <li>默认开启。存在生产者的消息，还未触发推送到订阅者，或订阅者接收消息失败，暂时堆积到 Topic 中。</li><li>在 Topic 列表中，可查看当前消息堆积的总数（近似值）。</li>|
-   | 消息过滤类型 | <li>标签：CMQ提供生产、订阅的消息标签匹配能力，可用于消息过滤。详细规则参考 [标签匹配功能说明](https://cloud.tencent.com/document/product/1496/61024)。</li><li>路由匹配：Binding key、Routing key 是组合使用的，完全兼容 RabbitMQ Topic 匹配模式。发消息时配的 Routing key 是客户端发消息带的。创建订阅关系时配的 Binding key 是 Topic 和订阅者的绑定关系。详细规则请参考 [路由键匹配功能说明](https://cloud.tencent.com/document/product/1496/61026)。</li> |
+   | 消息过滤类型 | <li>标签：TDMQ CMQ 版提供生产、订阅的消息标签匹配能力，可用于消息过滤。详细规则参考 [标签匹配功能说明](https://cloud.tencent.com/document/product/1496/61024)。</li><li>路由匹配：Binding key、Routing key 是组合使用的，完全兼容 RabbitMQ Topic 匹配模式。发消息时配的 Routing key 是客户端发消息带的。创建订阅关系时配的 Binding key 是 Topic 和订阅者的绑定关系。详细规则请参考 [路由键匹配功能说明](https://cloud.tencent.com/document/product/1496/61026)。</li> |
 
 ### 删除主题
 
