--- a/product/互联网中间件/TDMQ CMQ 版/01 产品简介/基本概念/消息生命周期.md
+++ b/product/互联网中间件/TDMQ CMQ 版/01 产品简介/基本概念/消息生命周期.md
@@ -4,7 +4,7 @@
 
 ![](https://main.qcloudimg.com/raw/063f581951bdf7a4fef8706fd8a878ad.jpg)
 
-- Component 1 将 Message A 发送到一个队列，该消息在 CMQ 服务器间提供多份冗余。
+- Component 1 将 Message A 发送到一个队列，该消息在 TDMQ CMQ 版服务器间提供多份冗余。
 
 - 当 Component 2 准备好处理消息时，就从队列检索消息，然后 Message A 返回。在 Message A 处理期间，它仍然停留在队列中，在**取出消息隐藏时长**阶段，其他业务不可获取 Message A。
 
