--- a/product/互联网中间件/TDMQ CMQ 版/03 快速入门/主题模型快速入门（未兼容，自测中）.md
+++ b/product/互联网中间件/TDMQ CMQ 版/03 快速入门/主题模型快速入门（未兼容，自测中）.md
@@ -16,7 +16,7 @@
    - 主题名称：以字母起始，只能包含字母、数字、“-”及“_”，最大64字符，创建后不能修改，严格区分大小写。
    - 消息堆积：未触发推送到订阅者，或订阅者接收失败的消息，暂时堆积到主题中。
    - 消息过滤类型：
-     - 标签：CMQ 提供生产、订阅的消息标签匹配能力，可用于消息过滤。详细规则参考 [标签匹配功能说明](https://cloud.tencent.com/document/product/1496/61024)。
+     - 标签：TDMQ CMQ 版提供生产、订阅的消息标签匹配能力，可用于消息过滤。详细规则参考 [标签匹配功能说明](https://cloud.tencent.com/document/product/1496/61024)。
      - 路由匹配：Binding key、Routing key 是组合使用的，完全兼容 RabbitMQ Topic 匹配模式。发消息时配的 Routing key 是客户端发消息带的。创建订阅关系时配的 Binding key 是 topic 和 订阅者 的绑定关系。详细规则请参考 [路由键匹配功能说明](https://cloud.tencent.com/document/product/1496/61026)。
 3. 单击**提交**，在主题订阅列表可以看到创建好的主题。
 
@@ -66,9 +66,9 @@
 
    | 参数                | 说明                                                         |
    | ------------------- | ------------------------------------------------------------ |
-   | NameServerAddress   | API 调用地址，在[ TDMQ  CMQ 版控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务** > **API请求地址**处复制。<img src="https://main.qcloudimg.com/raw/397c634ac38494666e878caf69cf55e7.png" width="400px"> |
+   | NameServerAddress   | API 调用地址，在 [TDMQ  CMQ 版控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务** > **API请求地址**处复制。<img src="https://main.qcloudimg.com/raw/397c634ac38494666e878caf69cf55e7.png" width="400px"> |
    | SecretId、SecretKey | 云API密钥，登录 [访问管理控制台](https://console.cloud.tencent.com/cam/overview)，在**访问密钥** > **API密钥管理**页面复制。![](https://main.qcloudimg.com/raw/867837e2b1e6d347ecb04d7085938c08.png) |
-   | queue               | 队列名称，在[ TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务**列表页面获取。 |
+   | queue               | 队列名称，在 [TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务**列表页面获取。 |
 
 4. 运行生产消息程序 ProducerDemo.java，运行成功结果如下。
 	 ![](https://main.qcloudimg.com/raw/fe7a0d0cc795405feaf5f4039de80f05.png)
