--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/02 主题订阅/05 标签键匹配功能说明.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/02 主题订阅/05 标签键匹配功能说明.md
@@ -31,7 +31,7 @@ Topic 有且仅有1个订阅者 A，A 的订阅标签设置为 xiaomi。
 
 **场景分析**：
 
-- 对于订阅者 A，订阅标签不匹配，则 A 无法收到这100条消息。此时这100条消息立即丢弃，不会堆积在 CMQ 里。
+- 对于订阅者 A，订阅标签不匹配，则 A 无法收到这100条消息。此时这100条消息立即丢弃，不会堆积在 TDMQ CMQ 版里。
 - 生产者 publish 到 Topic 时，消息过滤 tag 只能在 publish 前设置一次，跟消息 ID 绑定，不可修改。
 
 ### 场景4
