--- a/product/安全服务/验证码/常见问题/验证相关.md
+++ b/product/安全服务/验证码/常见问题/验证相关.md
@@ -8,13 +8,13 @@
 ### 验证码的滑块验证码+手动设置验证码票据过期时间能否手动设置？
 当前暂不支持手动设置后端票据校验过期时间，后端 ticket 有效时长为5分钟。
 
-### 测试过程中，提示“滑块半路丢了”、“验证码出了小差，再试一次吧”、“网络恍惚了一下，再试一次吧”，该如何解决？
+### 测试过程中，测试过程中，提示“当前上网环境异常，请更换网络环境或稍后再试”，该如何解决？
 这是正常现象，是验证码服务拦截疑似恶意用户的一种表现形式。可能是用户在同一网络环境下高频集中地访问同一个场景的验证码服务，导致小规模的风控拦截。解决方法如下：
 - 等待10 - 15分钟后重新进行测试。
 - 尝试更换 IP 或设备再体验。
 - 登录[ 验证码控制台](https://console.cloud.tencent.com/captcha)，进入验证码服务详情页，单击【安全配置】，将恶意拦截等级调至“体验优先”。
 
-### 用户多次滑动验证码并拼接正确，却提示“再试试，拼的更准些”，是什么原因？
+### 用户多次滑动验证码并拼接正确，却提示“当前上网环境异常，请更换网络环境或稍后再试”，是什么原因？
 可能的原因有：
 - 用户使用环境异常，被策略判定为可疑用户，需要多尝试几次或更换网络环境。
 - 用户为恶意用户或处于恶意环境，被策略拦截。验证码服务会根据用户环境、验证历史、设备等一整套立体策略模型，进行策略打击，来保证验证安全。
