--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/05 消息回溯.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/05 消息回溯.md
@@ -5,7 +5,7 @@
 ## 功能说明
 
 ![](//mc.qcloudimg.com/static/img/5c1699ab442ad36b7e34a091bbcf089d/image.jpg)
-如上图，消息的生命周期为蓝色框内的片段。开启消息回溯能力后，已被消费者消费且确认删除的消息会进入**消息可回溯**区域，CMQ 后端还会保存该信息。但消息超过 Queue 的消息生命周期时（假设为1天），达到生命周期后，该消息会自动删除，不可回溯。
+如上图，消息的生命周期为蓝色框内的片段。开启消息回溯能力后，已被消费者消费且确认删除的消息会进入**消息可回溯**区域，TDMQ CMQ 版后端还会保存该信息。但消息超过 Queue 的消息生命周期时（假设为1天），达到生命周期后，该消息会自动删除，不可回溯。
 
 ### 产品逻辑
 
@@ -64,7 +64,7 @@
 在客户端设置消息回溯相关参数。
 
 ```java
-endpoint='' //CMQ 的域名
+endpoint='' //TDMQ CMQ 版的域名
 secretId ='' // 用户的 ID 和 key
 secretKey = ''
 account = Account(endpoint,secretId,secretKey)
