--- a/product/互联网中间件/TDMQ CMQ 版/06 最佳实践/消息去重.md
+++ b/product/互联网中间件/TDMQ CMQ 版/06 最佳实践/消息去重.md
@@ -7,7 +7,7 @@
 
 **生产消息确认：**生产者向 TDMQ CMQ 版发送消息后，等待 TDMQ CMQ 版回复确认； TDMQ CMQ 版将消息持久化到磁盘后，向生产者返回确认成功。否则在生产者请求超时、 TDMQ CMQ 版返回失败等情况下，生产者需要向 TDMQ CMQ 版重发消息。
 
-**消费者确认： TDMQ CMQ 版向消费者交付消息后，将消息置为不可见；在消息不可见时间内，消费者使用句柄删除消息。如果消息未被删除，且不可见时间超时，消息将重新可见。
+**消费者确认： **TDMQ CMQ 版向消费者交付消息后，将消息置为不可见；在消息不可见时间内，消费者使用句柄删除消息。如果消息未被删除，且不可见时间超时，消息将重新可见。
 
 由于消息确认机制是“至少一次交付（at least once）”，在网络抖动、生产者/消费者异常等情况下，就会出现生产者重复生产、消费者重复消费的情况。
 
