--- a/product/大数据与AI/万象优图2.0/购买说明/计费项/媒体处理费用.md
+++ b/product/大数据与AI/万象优图2.0/购买说明/计费项/媒体处理费用.md
@@ -21,22 +21,22 @@
 | 人声分离             |    0.08元/分钟                                |
 
 
-极速高清按照原视频时长进行计量，定价如下：
+极速高清按照输出视频时长进行计量，定价如下：
 
-<table>
-<tr><th>编码方式</th><th>分辨率</th><th>单价（元/分钟）</th></tr>
+<table >
+<tr><th>编码方式</th><th width="35%">分辨率</th><th width="15%">中国境内</th><th width="15%">硅谷、弗吉尼亚</th><th width="25%">孟买、首尔、曼谷、莫斯科、中国香港、东京、多伦多、法兰克福、新加坡</th></tr>
 <tr><td rowspan=6><b>H.264</td></tr>
-<tr><td>480P</td><td>0.066</td></tr>
-<tr><td>720P</td><td>0.1256</td></tr>
-<tr><td>1080P</td><td>0.2511</td></tr>
-<tr><td>2K</td><td>0.5022  </td></tr>
-<tr><td>4K</td><td>1.0044</td></tr>
+<tr><td>标清 SD（640 × 480）及以下</td><td>0.066</td><td>0.1567</td><td>0.1818</td></tr>
+<tr><td>高清 HD（1280 × 720）及以下</td><td>0.099</td><td>0.2106</td><td>0.2436</td></tr>
+<tr><td>全高清 FHD（1920 × 1080）及以下</td><td>0.195</td><td>0.4181</td><td>0.4856</td></tr>
+<tr><td>2K（2560 × 1440）及以下</td><td>0.42</td><td>0.6267</td><td>0.7182</td></tr>
+<tr><td>4K（3840 × 2160）及以下</td><td>0.84</td><td>0.8533</td><td>0.9388</td></tr>
 <tr><td rowspan=6><b>H.265</td></tr>
-<tr><td>480P</td><td>0.198  </td></tr>
-<tr><td>720P</td><td>0.3768</td></tr>
-<tr><td>1080P</td><td>0.7533</td></tr>
-<tr><td>2K</td><td>1.5066</td></tr>
-<tr><td>4K</td><td>3.0132</td></tr>
+<tr><td>标清 SD（640 × 480）及以下</td><td>0.327</td><td>0.8222</td><td>0.9127</td></tr>
+<tr><td>高清 HD（1280 × 720）及以下</td><td>0.489</td><td>1.0639</td><td>1.1468</td></tr>
+<tr><td>全高清 FHD（1920 × 1080）及以下</td><td>0.978</td><td>2.2108</td><td>2.4305</td></tr>
+<tr><td>2K（2560 × 1440）及以下</td><td>2.1</td><td>3.2233</td><td>3.6821</td></tr>
+<tr><td>4K（3840 × 2160）及以下</td><td>4.2</td><td>4.3444</td><td>4.8440</td></tr>
 </table>
 
 精彩集锦按照原视频时长进行计量，定价如下：
