--- a/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/对象操作/生成预签名链接.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/对象操作/生成预签名链接.md
@@ -12,6 +12,14 @@
 
 SDK 所有接口的具体参数与方法说明，请参考 [SDK API](https://cos-dotnet-sdk-doc-1253960454.file.myqcloud.com/)。
 
+## 生成无签名链接
+
+当对象ACL属性设置为“公有读”时，可以通过以下SDK接口生成的URL直接访问对象。
+
+```C#
+ string GetObjectUrl(string bucket, string key);
+ ```
+
 ## 生成对象预签名链接
 
 #### 示例代码一：生成预签名上传链接
