--- a/product/互联网中间件/腾讯云微服务引擎/操作指南/服务治理中心操作指南/服务列表/服务管理.md
+++ b/product/互联网中间件/腾讯云微服务引擎/操作指南/服务治理中心操作指南/服务列表/服务管理.md
@@ -23,5 +23,5 @@
 
 ### 删除服务
 1. 登录 [TSE 控制台](https://console.cloud.tencent.com/tse)。
-2. 在在**治理中心**下的**服务列表**页面，选择目标服务，单击操作列的**删除**。
+2. 在**治理中心**下的**服务列表**页面，选择目标服务，单击操作列的**删除**。
 3. 在二次弹窗页面确认删除。
