--- a/product/域名与网站/域名注册/域名服务/域名信息修改.md
+++ b/product/域名与网站/域名注册/域名服务/域名信息修改.md
@@ -54,7 +54,7 @@
 ![填写信息](https://main.qcloudimg.com/raw/7738b64715be0279a9083438a919386f.png)
 5. 根据实际需求，修改域名信息。
 6. 阅读并同意相关协议后，单击**下一步**，进入 “实名认证” 页面。如下图所示：
->?请上传与证件类型相应的彩色扫描件或彩色复印件。
+>?请上传与证件类型一致且包含完整证件边框，大小为55KB - 1M以内、格式为 jpg 或 jpeg 的彩色扫描件或彩色复印件。
 >
 ![实名认证](https://main.qcloudimg.com/raw/0075e45978cdc71989e14a1577cc8634.png)
 7. 根据界面提示，选择**证件类型**，并上传证件图片，确认自动识别的**证件号码**。
