--- a/product/域名与网站/域名注册/域名服务/腾讯企业邮箱注册域名转入腾讯云.md
+++ b/product/域名与网站/域名注册/域名服务/腾讯企业邮箱注册域名转入腾讯云.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 - 已在腾讯企业邮成功注册域名。具体操作请参考 [添加企业域名](https://cloud.tencent.com/document/product/613/46021)。
-- 已注册成功注册腾讯云账号。具体操作请参考[注册腾讯云](https://cloud.tencent.com/document/product/1263/46191)。
+- 已成功注册腾讯云账号。具体操作请参考 [注册腾讯云](https://cloud.tencent.com/document/product/1263/46191)。
 - 注册的腾讯云账号已完成账号实名认证。具体操作请参考[账号实名认证](https://cloud.tencent.com/document/product/378/3629)。
 
 ## 操作步骤
@@ -26,5 +26,7 @@
 7. 过户成功后，即可前往腾讯云 [域名注册控制台](https://console.cloud.tencent.com/) 管理您的域名。
 
 
-
+## 遇到问题？
+- [域名转入腾讯云后如何添加企业邮箱解析？](https://cloud.tencent.com/document/product/302/3446)
+- 若您在域名转入过程中遇到更多问题，您可以参考文档 [转入流程问题](https://cloud.tencent.com/document/product/242/18608) 进行处理，若仍无法解决您的问题，请您联系 [技术支持](https://cloud.tencent.com/document/product/242/57608) 协助您解决。
 
