--- a/product/安全服务/主机安全/操作指南/安全概览.md
+++ b/product/安全服务/主机安全/操作指南/安全概览.md
@@ -24,13 +24,15 @@
 
 按安全事件分类计算扣分项，安全事件等级分类及扣分规则：
 
-| 等级|安全事件（按事件数计算） | 扣分/个 | 叠加最大扣分 |
-|---------|---------|---------|-|
-|严重	|木马、病毒、爆破成功。|	-50分|	-80分|
-|高危	|高危漏洞、高危基线、异地登录。	|-10分|	-60分|
-|中危	|中危漏洞、中危基线。|-3分	|-30分|
-|低危	|低危漏洞、低危基线。	|-2分	|-20分|
-|其他	|基础版（非防护状态）。|-1分	|-10分|
+| **等级** | **安全事件（按事件数计算）**                                 | **扣分/个** | **叠加最大扣分** |
+| -------- | ------------------------------------------------------------ | ----------- | ---------------- |
+| 严重     | 木马文件、暴破成功、恶意请求                                 | -40分       | -50分            |
+| 高危     | 严重漏洞、高危漏洞、严重基线、高危基线、异常登录（高危）、本地提权、反弹 Shell | -10分       | -20分            |
+| 中危     | 中危漏洞、中危基线                                           | -3分        | -10分            |
+| 低危     | 低危漏洞、低危基线                                           | -2分        | -5分             |
+| 其他     | 基础版防护、未安装主机安全客户端                             | -1分        | -5分             |
+
+
 
 #### 防护状态
 在防护状态功能中，可查看目前在线主机总数量、在线主机中专业版防护数量和基础版检测数量、客户端在线数、关机或离线的主机数量以及未安装客户端的主机数，同时提供资产更新日期、病毒库日期、漏洞库日期以及安全引擎防护等信息。
