--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/律师事务所小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/律师事务所小程序模板.md
@@ -1,3 +1,49 @@
+## 模板简介
+
+本模板是应用于律师事务所的小程序模板，包含了法律服务，在线咨询，律所介绍，律师团队，成功案例，新闻资讯等多种功能。
+
+## 功能模块
+<table>
+   <tr>
+      <th>模块</th>
+			<th>功能名称</th>
+			<th>详细功能清单</th>
+   </tr>
+   <tr>
+      <td rowspan="5">管理后台</td>
+		 <td>律师</td>
+      <td><li>律师新增/查看/编辑/删除</li><li>律师介绍</li></td>  
+   </tr>
+	 <tr>
+      <td>新闻</td>
+      <td><li>新闻新增/查看/编辑/删除</li><li>新闻详情</li></td>
+   </tr>
+	 	<tr>
+      <td>成功案例</td>
+      <td><li>成功案例新增/查看/编辑/删除</li><li>成功案例详情</li></td>
+   </tr>
+	 <tr>
+      <td>法律服务</td>
+      <td><li> 法律服务新增/查看/编辑/删除</li><li>法律服务详情</li></td>
+   </tr>	 
+	 	 <tr>
+      <td>在线咨询</td>
+      <td>查看咨询详情</td>
+   </tr>	
+   <tr>
+      <td rowspan="3">小程序端</td>
+      <td>首页</td>
+      <td><li> 法律服务</li><li>律师详情</li><li>成功案例</li><li>新闻资讯</li></td>
+   </tr>
+	 <tr>
+      <td>法律服务</td>
+      <td><li> 法律服务列表</li><li>法律服务详情</li></td>
+   </tr>	 
+	 	<tr>
+      <td>我们</td>
+      <td>律师介绍</td>
+</table>
+
 ### 步骤1：购买和试用小程序
 
 进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购律师事务所小程序，单击**试用7天**或**立即购买**下单。
@@ -18,15 +64,15 @@
 
 #### 首页轮播图装修
 打开左侧大纲树选择对应轮播图的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行轮播图的替换。
-![img](https://main.qcloudimg.com/raw/a977a3dd49e28a22f5d4fdf170646cc2.png)        
+![](https://main.qcloudimg.com/raw/94132e2a03c6557e3364ec17cffe39df.png)
 
 #### 定制新增页面
 单击**创建新页面**进行定制新页面。
-![img](https://main.qcloudimg.com/raw/e965155853efcb9adc104e1d2f080ef3.png)        
+![](https://main.qcloudimg.com/raw/a4afaa36439c37fcb49ee379f7026d40.png)     
 
 #### 设置页面跳转
 打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
-![img](https://main.qcloudimg.com/raw/7ef082072da23aaf4a445d3809fb1825.png)        
+![](https://main.qcloudimg.com/raw/b45a7e113843f6cd6230f3e13225bd82.png)    
 
 #### 定制事件响应
 
@@ -34,13 +80,13 @@
 
 ### 步骤4：创建模型应用[](id:step4)
 1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
-![](https://main.qcloudimg.com/raw/aede1dc19ac960c96ece3be805cbd71e.png)     
+![](https://main.qcloudimg.com/raw/67d1bd2e05e09ac751bc09b897e212d1.png)    
 2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
 ![](https://main.qcloudimg.com/raw/cf92702b3f165024e9eac05c12501071.png)
 3. 单击头部导航栏**发布**，跟根据实际情况选择发布方式并单击**下一步**。
-![img](https://main.qcloudimg.com/raw/1346bcee3b060d03245bfcd97baed57f.png)        
+![](https://main.qcloudimg.com/raw/9bc0f4bacad4777532be7fbcfd3c5cef.png)        
 4. 单击**访问链接**进入发布后的应用页面。
-![](https://main.qcloudimg.com/raw/b07d2942c8224ef7da20b5b054e4c999.png)         
+![](https://main.qcloudimg.com/raw/925a43bb58074bab5bd83d210baeea74.png)         
 
 
 ### 步骤5：数据管理[](id:step5)
@@ -51,31 +97,31 @@
 <img src = "https://main.qcloudimg.com/raw/cfae8684360e078e8c04d284e0266b73.png" style="width: 60%">
     
 如果要修改法律服务列表，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-![](https://main.qcloudimg.com/raw/bc8b505cb41d6f8a410a3770ba864953.png)   
+![](https://main.qcloudimg.com/raw/9707a62826b6e80f03fc9ab65d810ab4.png)   
 
 #### 在线咨询
 <img src = "https://main.qcloudimg.com/raw/b2ae27db73ca3267f5389bafa26a877a.png" style="width: 60%">    
 
 用户在小程序端提交在线咨询后，在后台数据管理页面中，找到对应的页面，查看留言内容。
-![](https://main.qcloudimg.com/raw/6c331db60d5a307c0cb0a5ac892978e4.png)  
+![](https://main.qcloudimg.com/raw/8d60dac5980065bdcb7df830ebb6c019.png)
 
 #### 成功案例
 <img src = "https://main.qcloudimg.com/raw/d1239b1259bc1160e8ea00b6533692dd.png" style="width: 60%">       
 
 如果要修改成功案例的内容，在后台数据管理页面中，找到对应的页面，修改产品信息。
-![](https://main.qcloudimg.com/raw/609064abc6ceeb0d49aa45ba18086226.png)     
+![](https://main.qcloudimg.com/raw/757c1fe18bb166b9d42137c43c47b99e.png)    
 
 #### 新闻列表
 <img src = "https://main.qcloudimg.com/raw/f91bc66b8287bff5d26bf1fb5c2a2d7b.png" style="width: 60%">          
 
 如果要修改新闻列表的内容，在后台数据管理页面中，找到对应的页面，修改信息
-![](https://main.qcloudimg.com/raw/06253f1308ff599a13627fa4f7e267ce.png)     
+![](https://main.qcloudimg.com/raw/6b97bd87252c7f9ba8974d5e6ab74403.png)   
 
 #### 律师列表
 <img src = "https://main.qcloudimg.com/raw/3a01110cd1b10057740789a576f355a0.png" style="width: 60%">          
 
 如果要修改律师列表的内容，在后台数据管理页面中，找到对应的页面，修改信息。
-![](https://main.qcloudimg.com/raw/3661cf78bb781b76b59468056b0af82e.png)      
+![](https://main.qcloudimg.com/raw/6ec5f99eefe779e75acf2a7787fb7c68.png)      
 
 
 
