--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/律政服务小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/律政服务小程序模板.md
@@ -1,3 +1,57 @@
+## 模板简介
+
+本模板是应用于律政服务的小程序模板，包含了法律服务，律师团队与律师介绍，答疑解惑，公司介绍，成功案例，优势介绍等多种功能。
+
+## 功能模块
+<table>
+   <tr>
+      <th>模块</th>
+			<th>功能名称</th>
+			<th>详细功能清单</th>
+   </tr>
+   <tr>
+      <td rowspan="6">管理后台</td>
+		 <td>常见问题</td>
+      <td><li>常见问题新增/查看/编辑/删</li><li>常见问题详情</li></td>  
+   </tr>
+	 <tr>
+      <td>法律服务</td>
+      <td><li>法律服务新增/查看/编辑/删除</li><li>法律服务详情</li></td>
+   </tr>
+	 	<tr>
+      <td>首页轮播图</td>
+      <td>首页轮播图新增/查看/编辑/删除</td>
+   </tr>
+	 <tr>
+      <td>成功案例</td>
+      <td><li>成功案例新增/查看/编辑/删除</li><li>成功案例详情</li></td>
+   </tr>	 
+	 	 <tr>
+      <td>律师</td>
+      <td><li>律师新增/查看/编辑/删除</li><li>律师详情</li></td>
+   </tr>	
+	 	<tr>
+      <td>法律咨询</td>
+      <td>查看咨询详情</td>
+   </tr>
+   <tr>
+      <td rowspan="4">小程序端</td>
+      <td>首页</td>
+      <td><li> 法律服务</li><li>律师详情</li><li>成功案例</li><li>在线咨询</li><li>轮播图</li></td>
+   </tr>
+	 <tr>
+      <td>法律服务</td>
+      <td><li> 法律服务列表</li><li>法律服务详情</li></td>
+   </tr>
+	 <tr>
+      <td>律师</td>
+      <td><li> 律师列表</li><li>律师详情</li></td>
+   </tr>	 
+	 	<tr>
+      <td>关于我们</td>
+      <td><li> 律师介绍</li><li>律师地址</li></td>
+</table>
+
 ### 步骤1：购买和试用小程序
 
 进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购律政服务小程序，单击**试用7天**或**立即购买**下单。
@@ -18,21 +72,21 @@
 
 #### 首页轮播图装修
 打开左侧大纲树选择对应轮播图的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行轮播图的替换。
-![img](https://main.qcloudimg.com/raw/bae58c146622573ba53c7d4df471c433.png)        
+![](https://main.qcloudimg.com/raw/2ab9a7373dfd9da28ea3f554ac503868.png)
 
 #### 定制新增页面
 单击**创建新页面**进行定制新页面。
-![img](https://main.qcloudimg.com/raw/ef03599a28a5f99ee7695e73b521d4de.png)        
+![](https://main.qcloudimg.com/raw/da01c65fb1d86af1640e99d0c8562a61.png)  
 
 #### 设置页面跳转
 打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
-![img](https://main.qcloudimg.com/raw/82980dd2c607ab3aead02311f4d7eed1.png)        
+![](https://main.qcloudimg.com/raw/7e2a35185de91f2a1318123a0fb9afb8.png)
 
 
 
 #### 关于我们页面装修
 打开左侧**页面管理**选择对应的页面，单击要修改的组件，进入右侧的**组件编辑** > **数据**页面中，可通过修改**文本内容**进行内容替换。
-![img](https://main.qcloudimg.com/raw/f6fcd92fde81bead8eba632aad31ae7a.png)        
+![](https://main.qcloudimg.com/raw/a3c97c061ab6c9ce50a6f1a3494e549d.png)     
 
 #### 定制事件响应
 
@@ -41,13 +95,13 @@
 
 ### 步骤4：创建模型应用[](id:step4)
 1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
-![](https://main.qcloudimg.com/raw/aede1dc19ac960c96ece3be805cbd71e.png)     
+![](https://main.qcloudimg.com/raw/67d1bd2e05e09ac751bc09b897e212d1.png)    
 2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
 ![](https://main.qcloudimg.com/raw/cf92702b3f165024e9eac05c12501071.png)
 3. 单击头部导航栏**发布**，跟根据实际情况选择发布方式并单击**下一步**。
-![img](https://main.qcloudimg.com/raw/1346bcee3b060d03245bfcd97baed57f.png)        
+![](https://main.qcloudimg.com/raw/9bc0f4bacad4777532be7fbcfd3c5cef.png)        
 4. 单击**访问链接**进入发布后的应用页面。
-![](https://main.qcloudimg.com/raw/b07d2942c8224ef7da20b5b054e4c999.png)      
+![](https://main.qcloudimg.com/raw/925a43bb58074bab5bd83d210baeea74.png)      
 
 
 
@@ -59,36 +113,36 @@
 <img src = "https://main.qcloudimg.com/raw/f75b1f8d2c60be50a957aa127593ef6c.png" style="width: 60%">     
 
  如果要修改首页的轮播图，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-![](https://main.qcloudimg.com/raw/563276f0ed2dcffc4dc9f69d9ca36edb.png)  
+![](https://main.qcloudimg.com/raw/92dd630df3a3acad95d9298b4f19effe.png)
 
 #### 管理法律服务的内容
 <img src = "https://main.qcloudimg.com/raw/8b8ac9cf01d97454e1eba0795da8aa3a.png" style="width: 60%">          
 
 如果要修改首页的法律服务内容，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-![](https://main.qcloudimg.com/raw/46d67e756d57eca27e89683d694a8e0f.png)   
+![](https://main.qcloudimg.com/raw/ed58fb52440593d4444f10a46c58d3a5.png)
 
 #### 律师管理
 <img src = "https://main.qcloudimg.com/raw/bfcfe8c01d857032826f60845b4c6f7c.png" style="width: 60%">    
 
 如果要修改首页的中的律师展示，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-![](https://main.qcloudimg.com/raw/b18ed4c409c003fdef97563ea3af0f55.png)     
+![](https://main.qcloudimg.com/raw/63e33581ee9b6ac0aadf5d08cc11a2b4.png)  
 
 #### 查看法律资讯留言
 
 在小程序端，用户提交法律资讯留言后，在后台数据中，可以查看到留言内容。
-![](https://main.qcloudimg.com/raw/04db9c75f2496dc38e39e6404ac9c866.png) 
+![](https://main.qcloudimg.com/raw/0a8df5c14d0c1081035fe1698ed6f0e5.png)
 
 #### 常见问题管理
 <img src = "https://main.qcloudimg.com/raw/6b0c2ecb6e9930955c0998ad13f72100.png" style="width: 60%">           
 
 如果要修改常见问题，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-![](https://main.qcloudimg.com/raw/af587197b101d56d5c9b3ef987c82370.png)    
+![](https://main.qcloudimg.com/raw/18930ef6454fcf4070bc8bf358eb89e3.png)   
 
 #### 成功案例管理
-<img src = "https://main.qcloudimg.com/raw/261f851d36cb10cd41c3893b1a8ef136.png" style="width: 60%">          
+<img src = "https://main.qcloudimg.com/raw/818b0293214d56a5510836715e735f6f.png" style="width: 60%">          
 
 如果要修改成功案例，请到后台数据管理页面，找到对应的页面，修改里面的内容
-![](https://main.qcloudimg.com/raw/7beeee3a00d147ea2e8cc3f3b98c0447.png)    
+![](https://main.qcloudimg.com/raw/96c2f9642c3da421a4d5655542f97410.png)  
 
 
 
