--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/汽车4S店报价小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/汽车4S店报价小程序模板.md
@@ -1,3 +1,53 @@
+## 模板简介
+本模板是应用于汽车 4S 报价的小程序模板，包含了车型信息，优惠活动，关于我们，最新活动，热销车型等多种功能。
+
+## 功能模块
+<table>
+   <tr>
+      <th>模块</th>
+			<th>功能名称</th>
+			<th>详细功能清单</th>
+   </tr>
+   <tr>
+      <td rowspan="5">管理后台</td>
+		 <td>店铺信息</td>
+      <td>店铺信息新增/查看/编辑/删除</td>  
+   </tr>
+	 <tr>
+      <td>车型</td>
+      <td><li> 车型新增/查看/编辑/删除</li><li>车型详情</li></td>
+   </tr>
+	 	<tr>
+      <td>车辆</td>
+      <td><li>车辆新增/查看/编辑/删除</li><li>车辆详情</li></td>
+   </tr>
+	 <tr>
+      <td>新闻</td>
+      <td><li>新闻新增/查看/编辑/删除</li><li>新闻详情</li></td>
+   </tr>	 
+	 	 <tr>
+      <td>咨询</td>
+      <td>查看咨询详情</td>
+   </tr>	
+   <tr>
+      <td rowspan="4">小程序端</td>
+      <td>首页</td>
+      <td><li> 店铺地址</li><li>最新活动及详情</li><li>热销车型</li></td>
+   </tr>
+	 <tr>
+      <td>车型信息</td>
+      <td><li> 车型列表</li><li>车辆详情</li></td>
+   </tr>	 
+	 	<tr>
+      <td>优惠活动</td>
+      <td><li> 优惠活动列表</li><li>优惠活动详情</li></td>
+   </tr>
+	 	 	<tr>
+      <td>关于我们</td>
+      <td><li>店铺介绍</li><li>店铺地址及联系方式</li></td>
+   </tr>	 
+</table>
+
 ### 步骤1：购买和试用小程序
 
 进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购汽车4S店报价小程序，单击**试用7天**或**立即购买**下单。
@@ -20,15 +70,15 @@
 
 #### 首页轮播图装修
 打开左侧大纲树选择对应轮播图的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行首页轮播图的替换。
-![img](https://main.qcloudimg.com/raw/0b00a4fbf2f19a548ab932975965e18d.png)        
+![](https://main.qcloudimg.com/raw/b81d371ea1611b18bd9803f06f3c2597.png)    
 
 #### 定制新增页面
 单击**创建新页面**进行定制新页面。
-![img](https://main.qcloudimg.com/raw/8995859c5187c58adfa0537dbe15d9b1.png)        
+![](https://main.qcloudimg.com/raw/088e61ea6fd7bcc11fbdd4719b83188d.png)    
 
 #### 设置页面跳转            
 打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
-![img](https://main.qcloudimg.com/raw/3779e88d40f861ea62ae997c1d9db3af.png)        
+![](https://main.qcloudimg.com/raw/0e66254680321a4910e92f6f3f269c3a.png)      
 
 #### 定制事件响应
 
@@ -36,13 +86,13 @@
 
 ### 步骤4：创建模型应用[](id:step4)
 1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
-![](https://main.qcloudimg.com/raw/aede1dc19ac960c96ece3be805cbd71e.png)     
+![](https://main.qcloudimg.com/raw/67d1bd2e05e09ac751bc09b897e212d1.png)    
 2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
 ![](https://main.qcloudimg.com/raw/cf92702b3f165024e9eac05c12501071.png)
 3. 单击头部导航栏**发布**，跟根据实际情况选择发布方式并单击**下一步**。
-![img](https://main.qcloudimg.com/raw/1346bcee3b060d03245bfcd97baed57f.png)        
+![](https://main.qcloudimg.com/raw/9bc0f4bacad4777532be7fbcfd3c5cef.png)        
 4. 单击**访问链接**进入发布后的应用页面。
-![](https://main.qcloudimg.com/raw/b07d2942c8224ef7da20b5b054e4c999.png)     
+![](https://main.qcloudimg.com/raw/925a43bb58074bab5bd83d210baeea74.png)     
 
 
 
@@ -54,31 +104,31 @@
 <img src = "https://main.qcloudimg.com/raw/f1c89496d3f4f14130ef34ab61b62475.png" style="width: 60%">     
 
 如果要修改店铺信息，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-![](https://main.qcloudimg.com/raw/1f47fec8dfa66032e848de02f21230be.png)      
+![](https://main.qcloudimg.com/raw/5b133950a068d7d660925a5109bfee84.png)     
 
 #### 车型列表
 <img src = "https://main.qcloudimg.com/raw/f546c8bfd775471dca8fe9c77ee45660.png" style="width: 60%">         
 
 如果要修改车型列表信息，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-![](https://main.qcloudimg.com/raw/e72d4b6a1e0643991760cd5b22d144df.png)
+![](https://main.qcloudimg.com/raw/caff4f2bfbb9ba4fc95168f4c0761930.png)
 
 #### 车辆列表
 <img src = "https://main.qcloudimg.com/raw/af3f103c09388695db763846bea6d766.png" style="width: 60%">         
 
 如果要修改车辆信息，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-![](https://main.qcloudimg.com/raw/69a48bdb318f6c16d44180d527d0cb81.png)    
+![](https://main.qcloudimg.com/raw/deac37d16fe00c87dd1e65c22baeeb6b.png)   
 
 #### 新闻列表
 <img src = "https://main.qcloudimg.com/raw/26f6115eb0aaa2a5a168c8122f97f43e.png" style="width: 60%">         
 
 如果要修改新闻信息，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-![](https://main.qcloudimg.com/raw/75d98c379a9ef19c07f038d07edbbc0e.png)    
+![](https://main.qcloudimg.com/raw/a1ae9192eba09ad0655761679b132e26.png)  
 
 #### 咨询列表
 <img src = "https://main.qcloudimg.com/raw/b7a7c4fcad83ef6310805f0e79ab2578.png" style="width: 60%">      
 
 如果要查看咨询列表，在后台数据管理页面中，找到对应的页面，查看咨询信息
-![](https://main.qcloudimg.com/raw/44c0bccfad58bd4488a652aeba2d7bc3.png)     
+![](https://main.qcloudimg.com/raw/3d053ef63ed17b00514a8033783865b0.png)  
 
 
 ### 步骤6：3分钟完成小程序预览或发布
