--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/汽车服务小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/汽车服务小程序模板.md
@@ -1,3 +1,55 @@
+## 模板简介
+
+本模板是应用于汽车服务的小程序模板，包含了企业介绍，特色服务，服务预约，服务介绍，关于我们等多种功能。
+
+## 功能模块
+<table>
+   <tr>
+      <th>模块</th>
+			<th>功能名称</th>
+			<th>详细功能清单</th>
+   </tr>
+   <tr>
+      <td rowspan="6">管理后台</td>
+		 <td>企业环境</td>
+      <td>企业环境新增/查看/编辑/删除</td>  
+   </tr>
+	 <tr>
+      <td>关于我们</td>
+      <td><li>关于我们新增/查看/编辑/删除</li><li>企业介绍、地址、联系方式</li></td>
+   </tr>
+	 	<tr>
+      <td>服务</td>
+      <td><li>服务新增/查看/编辑/删除</li><li>服务详情</li></td>
+   </tr>
+	 <tr>
+      <td>服务类型</td>
+      <td>服务类型新增/查看/编辑/删除</td>
+   </tr>	 
+	 	<tr>
+      <td>资讯</td>
+      <td><li>资讯新增/查看/编辑/删除</li><li>资讯详情</li></td>
+   </tr>	
+	 <tr>
+      <td>预约</td>
+      <td>查看预约详情</td>
+   </tr>		 
+   <tr>
+      <td rowspan="3">小程序端</td>
+      <td>首页</td>
+      <td><li> 服务类型及服务详情</li><li>特色服务及详情</li><li>最新活动及详情</li></td>
+   </tr>
+	 <tr>
+      <td>预约</td>
+      <td>预约界面</td>
+   </tr>	 
+	 	<tr>
+      <td>关于我们</td>
+      <td><li> 店铺介绍</li><li>店铺地址及联系方式</li></td>
+   </tr>
+</table>
+
+
 ### 步骤1：购买和试用小程序
 
 进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购汽车服务小程序，单击**试用7天**或**立即购买**下单。
@@ -21,15 +73,15 @@
 
 #### 首页轮播图装修
 打开左侧大纲树选择对应轮播图的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行轮播图的替换。
-![img](https://main.qcloudimg.com/raw/a41f53f70882ea31c24637b823006f2b.png)        
+![](https://main.qcloudimg.com/raw/ae374d3ce93c6a7c54f240b0be26a00a.png)    
 
 #### 定制新增页面
 单击**创建新页面**进行定制新页面。
-![img](https://main.qcloudimg.com/raw/0d9d4e5a60e296737e9807185a699235.png)        
+![](https://main.qcloudimg.com/raw/ddff415717b7e293b4c062bca6574203.png)      
 
 #### 设置页面跳转
 打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
-![img](https://main.qcloudimg.com/raw/cdb1eaac2e9fa66b84f3c3fe753a3850.png)        
+![](https://main.qcloudimg.com/raw/c9e7b71a98441734fa8fb1fee372e998.png)      
 
 #### 定制事件响应
 
@@ -37,13 +89,13 @@
 
 ### 步骤4：创建模型应用[](id:step4)
 1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
-![](https://main.qcloudimg.com/raw/aede1dc19ac960c96ece3be805cbd71e.png)     
+![](https://main.qcloudimg.com/raw/67d1bd2e05e09ac751bc09b897e212d1.png)    
 2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
 ![](https://main.qcloudimg.com/raw/cf92702b3f165024e9eac05c12501071.png)
 3. 单击头部导航栏**发布**，跟根据实际情况选择发布方式并单击**下一步**。
-![img](https://main.qcloudimg.com/raw/1346bcee3b060d03245bfcd97baed57f.png)        
+![](https://main.qcloudimg.com/raw/9bc0f4bacad4777532be7fbcfd3c5cef.png)        
 4. 单击**访问链接**进入发布后的应用页面。
-![](https://main.qcloudimg.com/raw/b07d2942c8224ef7da20b5b054e4c999.png)        
+![](https://main.qcloudimg.com/raw/925a43bb58074bab5bd83d210baeea74.png)        
 
 
 ### 步骤5：数据管理[](id:step5)
@@ -54,36 +106,36 @@
 <img src = "https://main.qcloudimg.com/raw/8dea9561247cecfbb8f2530c41ea23e4.png" style="width: 60%">
 
 用户在小程序端提交预约后，在后台数据管理页面中，找到对应的页面，查看预约内容。
-![](https://main.qcloudimg.com/raw/c273f0741cfadd060bbb4038f3d06757.png)  
+![](https://main.qcloudimg.com/raw/1fe1a8b32ae66f37f9c08b804a7fe91e.png) 
 
 #### 最新活动
 <img src = "https://main.qcloudimg.com/raw/a11c0672e014fb36ef9bdacad5a8aa6b.png" style="width: 60%">   
 
 如果要修改页面上的最新活动，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-![](https://main.qcloudimg.com/raw/41b5923b667e809c190d8fbc0bd640ff.png)      
+![](https://main.qcloudimg.com/raw/d0869139ec9f5dc086ba93664526b7e2.png)    
 
 #### 服务类型
 <img src = "https://main.qcloudimg.com/raw/f36acfb5c7cd4ae815becbb66c1a023f.png" style="width: 60%">   
 
 如果要修改页面上的服务类型，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-![](https://main.qcloudimg.com/raw/de238cda7e67a73fd74255df932a67b3.png)      
+![](https://main.qcloudimg.com/raw/71f7a6690d1000bbc84c42df0288b7c6.png)    
 
 #### 服务详情
 <img src = "https://main.qcloudimg.com/raw/74c6628274b8c1f71858865b4ebbea95.png" style="width: 60%">      
 
-如果要修改页面上的服务详情，请到后台数据管理页面，找到对应的页面，修改里面的内![](https://main.qcloudimg.com/raw/c9f9672f81a67dda8e6d6fd149939d9d.png)   
+如果要修改页面上的服务详情，请到后台数据管理页面，找到对应的页面，修改里面的内!![](https://main.qcloudimg.com/raw/6d4c6fe85d105d5ee777d108779def04.png)  
 
 #### 关于我们
 <img src = "https://main.qcloudimg.com/raw/005b6e1382931de513054e25585d8f23.png" style="width: 60%">           
 
 如果要修改页面上的关于我们，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-![](https://main.qcloudimg.com/raw/0e530773fe1b9803ceb43760053ae8df.png)       
+![](https://main.qcloudimg.com/raw/413727de0a21ca10a74027c0b8b3c075.png)   
 
 #### 企业环境
 <img src = "https://main.qcloudimg.com/raw/afc1955ff321a7c08a720197fc67b914.png" style="width: 60%">    
 
 如果要修改企业环境的内容，在后台数据管理页面中，找到对应的页面，修改信息。
-![](https://main.qcloudimg.com/raw/8856d7b222f979c015cfe63bbecc1895.png)       
+![](https://main.qcloudimg.com/raw/ffe5b0f3a565e9ac4b3b8391cff3dd42.png)      
 
 ### 步骤6：3分钟完成小程序预览或发布
 
