--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/律政服务小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/律政服务小程序模板.md
@@ -52,6 +52,7 @@
       <td><li> 律师介绍</li><li>律师地址</li></td>
 </table>
 
+## 使用流程
 ### 步骤1：购买和试用小程序
 
 进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购律政服务小程序，单击**试用7天**或**立即购买**下单。
