--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/律师事务所小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/律师事务所小程序模板.md
@@ -44,6 +44,8 @@
       <td>律师介绍</td>
 </table>
 
+
+## 使用流程
 ### 步骤1：购买和试用小程序
 
 进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购律师事务所小程序，单击**试用7天**或**立即购买**下单。
